--- a/tests/cassettes/test_insurance_all.yaml
+++ b/tests/cassettes/test_insurance_all.yaml
@@ -16,11 +16,11 @@ interactions:
     uri: https://api.easypost.com/v2/insurances?page_size=5
   response:
     body:
-      string: '{"insurances": [{"id": "ins_9490959cd728452b985e41c2a7e9e591", "object":
+      string: '{"insurances": [{"id": "ins_11815503dde74592ab2efba19b0ee7ab", "object":
         "Insurance", "mode": "test", "reference": null, "status": "pending", "amount":
         "100.00000", "provider": "easypost", "provider_id": null, "to_address": {"id":
-        "adr_a859ad85f34611edb81fac1f6bc7b362", "object": "Address", "created_at":
-        "2023-05-15T17:33:51+00:00", "updated_at": "2023-05-15T17:33:51+00:00", "name":
+        "adr_412a603f8e3911eea073ac1f6bc53342", "object": "Address", "created_at":
+        "2023-11-28T21:58:25+00:00", "updated_at": "2023-11-28T21:58:25+00:00", "name":
         "ELIZABETH SWAN", "company": null, "street1": "179 N HARBOR DR", "street2":
         null, "city": "REDONDO BEACH", "state": "CA", "zip": "90277-2506", "country":
         "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
@@ -28,8 +28,8 @@ interactions:
         "verifications": {"zip4": {"success": true, "errors": [], "details": null},
         "delivery": {"success": true, "errors": [], "details": {"latitude": 33.8436,
         "longitude": -118.39177, "time_zone": "America/Los_Angeles"}}}}, "from_address":
-        {"id": "adr_a85ee05af34611ed82ddac1f6b0a0d1e", "object": "Address", "created_at":
-        "2023-05-15T17:33:51+00:00", "updated_at": "2023-05-15T17:33:51+00:00", "name":
+        {"id": "adr_41300cdf8e3911eea079ac1f6bc53342", "object": "Address", "created_at":
+        "2023-11-28T21:58:25+00:00", "updated_at": "2023-11-28T21:58:25+00:00", "name":
         "JACK SPARROW", "company": null, "street1": "388 TOWNSEND ST APT 20", "street2":
         null, "city": "SAN FRANCISCO", "state": "CA", "zip": "94107-1670", "country":
         "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
@@ -37,26 +37,26 @@ interactions:
         {"zip4": {"success": true, "errors": [], "details": null}, "delivery": {"success":
         true, "errors": [], "details": {"latitude": 37.77551, "longitude": -122.39697,
         "time_zone": "America/Los_Angeles"}}}}, "shipment_id": null, "tracker": {"id":
-        "trk_2c76559389a844f2a36479b0a131e677", "object": "Tracker", "mode": "test",
-        "tracking_code": "9400100104262209986269", "status": "error", "status_detail":
-        null, "created_at": "2023-05-15T17:33:51Z", "updated_at": "2023-05-15T17:33:51Z",
+        "trk_245ad918d85e43bb924f6d3803d6a196", "object": "Tracker", "mode": "test",
+        "tracking_code": "9400100105442285851814", "status": "error", "status_detail":
+        null, "created_at": "2023-11-28T21:58:25Z", "updated_at": "2023-11-28T21:58:25Z",
         "signed_by": null, "weight": null, "est_delivery_date": null, "shipment_id":
         null, "carrier": "USPS", "tracking_details": [{"object": "TrackingDetail",
         "message": "In test mode, only test tracking numbers are valid. Test tracking
         numbers are EZ1000000001, EZ2000000002, ... , EZ7000000007", "description":
-        null, "status": "error", "status_detail": null, "datetime": "2023-05-15T17:33:51Z",
-        "source": "ProcessingError", "carrier_code": null, "tracking_location": {"object":
+        "", "status": "error", "status_detail": null, "datetime": "2023-11-28T21:58:25Z",
+        "source": "ProcessingError", "carrier_code": "", "tracking_location": {"object":
         "TrackingLocation", "city": null, "state": null, "country": null, "zip": null}}],
         "carrier_detail": null, "finalized": true, "is_return": false, "public_url":
-        "https://track.easypost.com/djE6dHJrXzJjNzY1NTkzODlhODQ0ZjJhMzY0NzliMGExMzFlNjc3",
-        "fees": []}, "tracking_code": "9400100104262209986269", "fee": {"object":
+        "https://track.easypost.com/djE6dHJrXzI0NWFkOTE4ZDg1ZTQzYmI5MjRmNmQzODAzZDZhMTk2",
+        "fees": []}, "tracking_code": "9400100105442285851814", "fee": {"object":
         "Fee", "type": "InsuranceFee", "amount": "1.00000", "charged": true, "refunded":
-        false}, "messages": [], "created_at": "2023-05-15T17:33:51Z", "updated_at":
-        "2023-05-15T17:33:51Z"}, {"id": "ins_e60e5e24549648c78069269b3ade5e42", "object":
+        false}, "messages": [], "created_at": "2023-11-28T21:58:25Z", "updated_at":
+        "2023-11-28T21:58:25Z"}, {"id": "ins_0ffcd38dd4a04b9d97eb5d6aad7a4533", "object":
         "Insurance", "mode": "test", "reference": null, "status": "pending", "amount":
         "100.00000", "provider": "easypost", "provider_id": null, "to_address": {"id":
-        "adr_a93ebda3f34611edbb1c3cecef1b359e", "object": "Address", "created_at":
-        "2023-05-15T17:33:53+00:00", "updated_at": "2023-05-15T17:33:53+00:00", "name":
+        "adr_4244261b8e3911ee9d51ac1f6bc539aa", "object": "Address", "created_at":
+        "2023-11-28T21:58:27+00:00", "updated_at": "2023-11-28T21:58:27+00:00", "name":
         "ELIZABETH SWAN", "company": null, "street1": "179 N HARBOR DR", "street2":
         null, "city": "REDONDO BEACH", "state": "CA", "zip": "90277-2506", "country":
         "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
@@ -64,8 +64,8 @@ interactions:
         "verifications": {"zip4": {"success": true, "errors": [], "details": null},
         "delivery": {"success": true, "errors": [], "details": {"latitude": 33.8436,
         "longitude": -118.39177, "time_zone": "America/Los_Angeles"}}}}, "from_address":
-        {"id": "adr_a943c199f34611edbb203cecef1b359e", "object": "Address", "created_at":
-        "2023-05-15T17:33:53+00:00", "updated_at": "2023-05-15T17:33:53+00:00", "name":
+        {"id": "adr_42495c3e8e3911ee91863cecef1b359e", "object": "Address", "created_at":
+        "2023-11-28T21:58:27+00:00", "updated_at": "2023-11-28T21:58:27+00:00", "name":
         "JACK SPARROW", "company": null, "street1": "388 TOWNSEND ST APT 20", "street2":
         null, "city": "SAN FRANCISCO", "state": "CA", "zip": "94107-1670", "country":
         "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
@@ -73,31 +73,29 @@ interactions:
         {"zip4": {"success": true, "errors": [], "details": null}, "delivery": {"success":
         true, "errors": [], "details": {"latitude": 37.77551, "longitude": -122.39697,
         "time_zone": "America/Los_Angeles"}}}}, "shipment_id": null, "tracker": {"id":
-        "trk_8b28077df755477c92df4122d2797f73", "object": "Tracker", "mode": "test",
-        "tracking_code": "9400100104262209986283", "status": "error", "status_detail":
-        null, "created_at": "2023-05-15T17:33:53Z", "updated_at": "2023-05-15T17:33:53Z",
+        "trk_b66e456ceda6498d9693ef37a81d4b8e", "object": "Tracker", "mode": "test",
+        "tracking_code": "9400100105442285851890", "status": "error", "status_detail":
+        null, "created_at": "2023-11-28T21:58:27Z", "updated_at": "2023-11-28T21:58:27Z",
         "signed_by": null, "weight": null, "est_delivery_date": null, "shipment_id":
         null, "carrier": "USPS", "tracking_details": [{"object": "TrackingDetail",
         "message": "In test mode, only test tracking numbers are valid. Test tracking
         numbers are EZ1000000001, EZ2000000002, ... , EZ7000000007", "description":
-        null, "status": "error", "status_detail": null, "datetime": "2023-05-15T17:33:53Z",
-        "source": "ProcessingError", "carrier_code": null, "tracking_location": {"object":
+        "", "status": "error", "status_detail": null, "datetime": "2023-11-28T21:58:27Z",
+        "source": "ProcessingError", "carrier_code": "", "tracking_location": {"object":
         "TrackingLocation", "city": null, "state": null, "country": null, "zip": null}}],
         "carrier_detail": null, "finalized": true, "is_return": false, "public_url":
-        "https://track.easypost.com/djE6dHJrXzhiMjgwNzdkZjc1NTQ3N2M5MmRmNDEyMmQyNzk3Zjcz",
-        "fees": []}, "tracking_code": "9400100104262209986283", "fee": {"object":
+        "https://track.easypost.com/djE6dHJrX2I2NmU0NTZjZWRhNjQ5OGQ5NjkzZWYzN2E4MWQ0Yjhl",
+        "fees": []}, "tracking_code": "9400100105442285851890", "fee": {"object":
         "Fee", "type": "InsuranceFee", "amount": "1.00000", "charged": true, "refunded":
-        false}, "messages": [], "created_at": "2023-05-15T17:33:53Z", "updated_at":
-        "2023-05-15T17:33:53Z"}], "has_more": false}'
+        false}, "messages": [], "created_at": "2023-11-28T21:58:27Z", "updated_at":
+        "2023-11-28T21:58:27Z"}], "has_more": false}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '5355'
+      - '5347'
       content-type:
       - application/json; charset=utf-8
-      etag:
-      - W/"36c367a5e230654b6e9af24383f83138"
       expires:
       - '0'
       pragma:
@@ -115,20 +113,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 44e495af64626d01e78744810020682e
+      - ae35d0b865666283e78a938d003d1ec4
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb1nuq
+      - bigweb31nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq a29e4ad05c
-      - extlb2nuq 5ab12a3ed2
+      - intlb1nuq b3de2c47ef
+      - extlb2nuq 003ad9bca0
       x-runtime:
-      - '0.113227'
+      - '0.128904'
       x-version-label:
-      - easypost-202305151637-e5ce91ee24-master
+      - easypost-202311250013-a0f06fbc2c-master
       x-xss-protection:
       - 1; mode=block
     status:
