--- a/tests/cassettes/test_pickup_create.yaml
+++ b/tests/cassettes/test_pickup_create.yaml
@@ -7,7 +7,7 @@ interactions:
       "state": "CA", "zip": "90277", "country": "US", "email": "test@example.com",
       "phone": "5555555555"}, "parcel": {"length": 10, "width": 8, "height": 4, "weight":
       15.4}, "service": "First", "carrier_accounts": ["ca_b25657e9896e4d63ac8151ac346ac41e"],
-      "carrier": "USPS"}, "carbon_offset": false}'
+      "carrier": "USPS"}}'
     headers:
       Accept:
       - '*/*'
@@ -16,7 +16,7 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '620'
+      - '596'
       Content-Type:
       - application/json
       authorization:
@@ -27,110 +27,115 @@ interactions:
     uri: https://api.easypost.com/v2/shipments
   response:
     body:
-      string: '{"created_at": "2023-05-15T21:49:51Z", "is_return": false, "messages":
+      string: '{"created_at": "2023-11-28T22:00:10Z", "is_return": false, "messages":
         [], "mode": "test", "options": {"currency": "USD", "payment": {"type": "SENDER"},
         "date_advance": 0}, "reference": null, "status": "unknown", "tracking_code":
-        "9400100104262210070940", "updated_at": "2023-05-15T21:49:52Z", "batch_id":
+        "9400100105442285856031", "updated_at": "2023-11-28T22:00:11Z", "batch_id":
         null, "batch_status": null, "batch_message": null, "customs_info": null, "from_address":
-        {"id": "adr_6b762f44f36a11ed8279ac1f6bc72124", "object": "Address", "created_at":
-        "2023-05-15T21:49:51+00:00", "updated_at": "2023-05-15T21:49:51+00:00", "name":
+        {"id": "adr_80129b778e3911ee8bbdac1f6bc539ae", "object": "Address", "created_at":
+        "2023-11-28T22:00:10+00:00", "updated_at": "2023-11-28T22:00:10+00:00", "name":
         "Elizabeth Swan", "company": null, "street1": "179 N Harbor Dr", "street2":
         null, "city": "Redondo Beach", "state": "CA", "zip": "90277", "country": "US",
         "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
         null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
-        {}}, "insurance": null, "order_id": null, "parcel": {"id": "prcl_2f6e70599b424c10ba32dc2d05213870",
-        "object": "Parcel", "created_at": "2023-05-15T21:49:51Z", "updated_at": "2023-05-15T21:49:51Z",
+        {}}, "insurance": null, "order_id": null, "parcel": {"id": "prcl_0aa05c178d434b66b8355e41b841dd3e",
+        "object": "Parcel", "created_at": "2023-11-28T22:00:10Z", "updated_at": "2023-11-28T22:00:10Z",
         "length": 10.0, "width": 8.0, "height": 4.0, "predefined_package": null, "weight":
-        15.4, "mode": "test"}, "postage_label": {"object": "PostageLabel", "id": "pl_dffd4bead34c4eccbd3f8f8b63573957",
-        "created_at": "2023-05-15T21:49:52Z", "updated_at": "2023-05-15T21:49:52Z",
-        "date_advance": 0, "integrated_form": "none", "label_date": "2023-05-15T21:49:52Z",
+        15.4, "mode": "test"}, "postage_label": {"object": "PostageLabel", "id": "pl_f289e8f296bc4773bacfce758cc83dda",
+        "created_at": "2023-11-28T22:00:11Z", "updated_at": "2023-11-28T22:00:11Z",
+        "date_advance": 0, "integrated_form": "none", "label_date": "2023-11-28T22:00:11Z",
         "label_resolution": 300, "label_size": "4x6", "label_type": "default", "label_file_type":
-        "image/png", "label_url": "https://easypost-files.s3.us-west-2.amazonaws.com/files/postage_label/20230515/ae55b2b2ffbf464dbfa3c9bf6ed99e86.png",
+        "image/png", "label_url": "https://easypost-files.s3.us-west-2.amazonaws.com/files/postage_label/20231128/e8e631372555ce4e20b3e456243e6ddb7f.png",
         "label_pdf_url": null, "label_zpl_url": null, "label_epl2_url": null, "label_file":
-        null}, "rates": [{"id": "rate_da446c8160994a159cd41e82dbce16bb", "object":
-        "Rate", "created_at": "2023-05-15T21:49:51Z", "updated_at": "2023-05-15T21:49:51Z",
+        null}, "rates": [{"id": "rate_2f3670e74d5b422e8d129ddf64a51c05", "object":
+        "Rate", "created_at": "2023-11-28T22:00:10Z", "updated_at": "2023-11-28T22:00:10Z",
         "mode": "test", "service": "Express", "carrier": "USPS", "rate": "31.25",
         "currency": "USD", "retail_rate": "35.80", "retail_currency": "USD", "list_rate":
         "31.25", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
         null, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        null, "shipment_id": "shp_bd7a625f2f5e430f960e4b435b49052d", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_71bd605e26684d569ce88ce56f284101",
-        "object": "Rate", "created_at": "2023-05-15T21:49:51Z", "updated_at": "2023-05-15T21:49:51Z",
-        "mode": "test", "service": "ParcelSelect", "carrier": "USPS", "rate": "6.76",
-        "currency": "USD", "retail_rate": "7.75", "retail_currency": "USD", "list_rate":
-        "7.75", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
-        5, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        5, "shipment_id": "shp_bd7a625f2f5e430f960e4b435b49052d", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_e733fbcd7f074bea8ffc16b6ae5c4759",
-        "object": "Rate", "created_at": "2023-05-15T21:49:51Z", "updated_at": "2023-05-15T21:49:51Z",
-        "mode": "test", "service": "Priority", "carrier": "USPS", "rate": "7.15",
+        null, "shipment_id": "shp_d02507b251604bceb84b99c16ee9dd89", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_319c30426b7e481c92c8f71a07ef75be",
+        "object": "Rate", "created_at": "2023-11-28T22:00:10Z", "updated_at": "2023-11-28T22:00:10Z",
+        "mode": "test", "service": "Priority", "carrier": "USPS", "rate": "6.95",
         "currency": "USD", "retail_rate": "10.20", "retail_currency": "USD", "list_rate":
         "8.24", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
         2, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        2, "shipment_id": "shp_bd7a625f2f5e430f960e4b435b49052d", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_a1a288eb38324043a41b94b271849355",
-        "object": "Rate", "created_at": "2023-05-15T21:49:51Z", "updated_at": "2023-05-15T21:49:51Z",
-        "mode": "test", "service": "First", "carrier": "USPS", "rate": "6.07", "currency":
-        "USD", "retail_rate": "6.07", "retail_currency": "USD", "list_rate": "6.07",
+        2, "shipment_id": "shp_d02507b251604bceb84b99c16ee9dd89", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_77f3df4a2cf24339b545b11b8f9b8e96",
+        "object": "Rate", "created_at": "2023-11-28T22:00:10Z", "updated_at": "2023-11-28T22:00:10Z",
+        "mode": "test", "service": "GroundAdvantage", "carrier": "USPS", "rate": "5.93",
+        "currency": "USD", "retail_rate": "8.00", "retail_currency": "USD", "list_rate":
+        "6.07", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
+        3, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
+        3, "shipment_id": "shp_d02507b251604bceb84b99c16ee9dd89", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_a9e1db6711da4fadbd79d5fe17338473",
+        "object": "Rate", "created_at": "2023-11-28T22:00:10Z", "updated_at": "2023-11-28T22:00:10Z",
+        "mode": "test", "service": "First", "carrier": "USPS", "rate": "5.93", "currency":
+        "USD", "retail_rate": "8.00", "retail_currency": "USD", "list_rate": "6.07",
         "list_currency": "USD", "billing_type": "easypost", "delivery_days": 3, "delivery_date":
         null, "delivery_date_guaranteed": false, "est_delivery_days": 3, "shipment_id":
-        "shp_bd7a625f2f5e430f960e4b435b49052d", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"}],
-        "refund_status": null, "scan_form": null, "selected_rate": {"id": "rate_a1a288eb38324043a41b94b271849355",
-        "object": "Rate", "created_at": "2023-05-15T21:49:52Z", "updated_at": "2023-05-15T21:49:52Z",
-        "mode": "test", "service": "First", "carrier": "USPS", "rate": "6.07", "currency":
-        "USD", "retail_rate": "6.07", "retail_currency": "USD", "list_rate": "6.07",
+        "shp_d02507b251604bceb84b99c16ee9dd89", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"},
+        {"id": "rate_4ca6cc37ff4a4622bb3b7e7fdc3b9443", "object": "Rate", "created_at":
+        "2023-11-28T22:00:10Z", "updated_at": "2023-11-28T22:00:10Z", "mode": "test",
+        "service": "ParcelSelect", "carrier": "USPS", "rate": "5.93", "currency":
+        "USD", "retail_rate": "8.00", "retail_currency": "USD", "list_rate": "6.07",
         "list_currency": "USD", "billing_type": "easypost", "delivery_days": 3, "delivery_date":
         null, "delivery_date_guaranteed": false, "est_delivery_days": 3, "shipment_id":
-        "shp_bd7a625f2f5e430f960e4b435b49052d", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"},
-        "tracker": {"id": "trk_1d6d74983da4469cb09a339b7245ec29", "object": "Tracker",
-        "mode": "test", "tracking_code": "9400100104262210070940", "status": "unknown",
-        "status_detail": "unknown", "created_at": "2023-05-15T21:49:52Z", "updated_at":
-        "2023-05-15T21:49:52Z", "signed_by": null, "weight": null, "est_delivery_date":
-        null, "shipment_id": "shp_bd7a625f2f5e430f960e4b435b49052d", "carrier": "USPS",
+        "shp_d02507b251604bceb84b99c16ee9dd89", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"}],
+        "refund_status": null, "scan_form": null, "selected_rate": {"id": "rate_a9e1db6711da4fadbd79d5fe17338473",
+        "object": "Rate", "created_at": "2023-11-28T22:00:11Z", "updated_at": "2023-11-28T22:00:11Z",
+        "mode": "test", "service": "First", "carrier": "USPS", "rate": "5.93", "currency":
+        "USD", "retail_rate": "8.00", "retail_currency": "USD", "list_rate": "6.07",
+        "list_currency": "USD", "billing_type": "easypost", "delivery_days": 3, "delivery_date":
+        null, "delivery_date_guaranteed": false, "est_delivery_days": 3, "shipment_id":
+        "shp_d02507b251604bceb84b99c16ee9dd89", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"},
+        "tracker": {"id": "trk_73d131e31b1b4b6d909f704864d00f28", "object": "Tracker",
+        "mode": "test", "tracking_code": "9400100105442285856031", "status": "unknown",
+        "status_detail": "unknown", "created_at": "2023-11-28T22:00:11Z", "updated_at":
+        "2023-11-28T22:00:11Z", "signed_by": null, "weight": null, "est_delivery_date":
+        null, "shipment_id": "shp_d02507b251604bceb84b99c16ee9dd89", "carrier": "USPS",
         "tracking_details": [], "fees": [], "carrier_detail": null, "public_url":
-        "https://track.easypost.com/djE6dHJrXzFkNmQ3NDk4M2RhNDQ2OWNiMDlhMzM5YjcyNDVlYzI5"},
-        "to_address": {"id": "adr_6b6e1244f36a11ed8fc5ac1f6bc7b362", "object": "Address",
-        "created_at": "2023-05-15T21:49:51+00:00", "updated_at": "2023-05-15T21:49:51+00:00",
+        "https://track.easypost.com/djE6dHJrXzczZDEzMWUzMWIxYjRiNmQ5MDlmNzA0ODY0ZDAwZjI4"},
+        "to_address": {"id": "adr_800f829c8e3911eeb5a63cecef1b359e", "object": "Address",
+        "created_at": "2023-11-28T22:00:10+00:00", "updated_at": "2023-11-28T22:00:11+00:00",
         "name": "JACK SPARROW", "company": null, "street1": "388 TOWNSEND ST APT 20",
-        "street2": null, "city": "SAN FRANCISCO", "state": "CA", "zip": "94107-1670",
+        "street2": "", "city": "SAN FRANCISCO", "state": "CA", "zip": "94107-1670",
         "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test",
         "carrier_facility": null, "residential": true, "federal_tax_id": null, "state_tax_id":
         null, "verifications": {"zip4": {"success": true, "errors": [], "details":
         null}, "delivery": {"success": true, "errors": [], "details": {"latitude":
         37.77551, "longitude": -122.39697, "time_zone": "America/Los_Angeles"}}}},
-        "usps_zone": 4, "return_address": {"id": "adr_6b762f44f36a11ed8279ac1f6bc72124",
-        "object": "Address", "created_at": "2023-05-15T21:49:51+00:00", "updated_at":
-        "2023-05-15T21:49:51+00:00", "name": "Elizabeth Swan", "company": null, "street1":
+        "usps_zone": 4, "return_address": {"id": "adr_80129b778e3911ee8bbdac1f6bc539ae",
+        "object": "Address", "created_at": "2023-11-28T22:00:10+00:00", "updated_at":
+        "2023-11-28T22:00:10+00:00", "name": "Elizabeth Swan", "company": null, "street1":
         "179 N Harbor Dr", "street2": null, "city": "Redondo Beach", "state": "CA",
         "zip": "90277", "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>",
         "mode": "test", "carrier_facility": null, "residential": null, "federal_tax_id":
         null, "state_tax_id": null, "verifications": {}}, "buyer_address": {"id":
-        "adr_6b6e1244f36a11ed8fc5ac1f6bc7b362", "object": "Address", "created_at":
-        "2023-05-15T21:49:51+00:00", "updated_at": "2023-05-15T21:49:51+00:00", "name":
+        "adr_800f829c8e3911eeb5a63cecef1b359e", "object": "Address", "created_at":
+        "2023-11-28T22:00:10+00:00", "updated_at": "2023-11-28T22:00:11+00:00", "name":
         "JACK SPARROW", "company": null, "street1": "388 TOWNSEND ST APT 20", "street2":
-        null, "city": "SAN FRANCISCO", "state": "CA", "zip": "94107-1670", "country":
+        "", "city": "SAN FRANCISCO", "state": "CA", "zip": "94107-1670", "country":
         "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
         null, "residential": true, "federal_tax_id": null, "state_tax_id": null, "verifications":
         {"zip4": {"success": true, "errors": [], "details": null}, "delivery": {"success":
         true, "errors": [], "details": {"latitude": 37.77551, "longitude": -122.39697,
         "time_zone": "America/Los_Angeles"}}}}, "forms": [], "fees": [{"object": "Fee",
         "type": "LabelFee", "amount": "0.00000", "charged": true, "refunded": false},
-        {"object": "Fee", "type": "PostageFee", "amount": "6.07000", "charged": true,
-        "refunded": false}], "id": "shp_bd7a625f2f5e430f960e4b435b49052d", "object":
+        {"object": "Fee", "type": "PostageFee", "amount": "5.93000", "charged": true,
+        "refunded": false}], "id": "shp_d02507b251604bceb84b99c16ee9dd89", "object":
         "Shipment"}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '6985'
+      - '7526'
       content-type:
       - application/json; charset=utf-8
-      etag:
-      - W/"b7e585a06f3348555fa485bcfbe8b8a8"
       expires:
       - '0'
       location:
-      - /api/v2/shipments/shp_bd7a625f2f5e430f960e4b435b49052d
+      - /api/v2/shipments/shp_d02507b251604bceb84b99c16ee9dd89
       pragma:
       - no-cache
       referrer-policy:
@@ -146,20 +151,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 3ecd17946462a8ffe2b98c340008917d
+      - ae35d0b8656662eae78a93ce003d913f
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb11nuq
+      - bigweb38nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq a29e4ad05c
-      - extlb1nuq 5ab12a3ed2
+      - intlb1nuq b3de2c47ef
+      - extlb2nuq 003ad9bca0
       x-runtime:
-      - '1.545815'
+      - '0.983982'
       x-version-label:
-      - easypost-202305152107-770224374c-master
+      - easypost-202311250013-a0f06fbc2c-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -169,8 +174,8 @@ interactions:
     body: '{"pickup": {"address": {"name": "Jack Sparrow", "street1": "388 Townsend
       St", "street2": "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107",
       "country": "US", "email": "test@example.com", "phone": "5555555555"}, "min_datetime":
-      "2023-05-17", "max_datetime": "2023-05-17", "instructions": "Pickup at front
-      door", "shipment": {"id": "shp_bd7a625f2f5e430f960e4b435b49052d"}}}'
+      "2023-12-17", "max_datetime": "2023-12-17", "instructions": "Pickup at front
+      door", "shipment": {"id": "shp_d02507b251604bceb84b99c16ee9dd89"}}}'
     headers:
       Accept:
       - '*/*'
@@ -190,21 +195,21 @@ interactions:
     uri: https://api.easypost.com/v2/pickups
   response:
     body:
-      string: '{"id": "pickup_0c2c33d249cc4982a1bc78c2c1a8d210", "object": "Pickup",
-        "created_at": "2023-05-15T21:49:53Z", "updated_at": "2023-05-15T21:49:53Z",
-        "mode": "test", "status": "unknown", "reference": null, "min_datetime": "2023-05-17T00:00:00Z",
-        "max_datetime": "2023-05-17T00:00:00Z", "is_account_address": false, "instructions":
+      string: '{"id": "pickup_9860cb6ae0bd4f149c53248ff9048351", "object": "Pickup",
+        "created_at": "2023-11-28T22:00:12Z", "updated_at": "2023-11-28T22:00:12Z",
+        "mode": "test", "status": "unknown", "reference": null, "min_datetime": "2023-12-17T00:00:00Z",
+        "max_datetime": "2023-12-17T00:00:00Z", "is_account_address": false, "instructions":
         "Pickup at front door", "messages": [], "confirmation": null, "address": {"id":
-        "adr_6c6df1a4f36a11ed94ac3cecef1b359e", "object": "Address", "created_at":
-        "2023-05-15T21:49:52+00:00", "updated_at": "2023-05-15T21:49:52+00:00", "name":
+        "adr_80c1cd288e3911eeb61a3cecef1b359e", "object": "Address", "created_at":
+        "2023-11-28T22:00:11+00:00", "updated_at": "2023-11-28T22:00:11+00:00", "name":
         "Jack Sparrow", "company": null, "street1": "388 Townsend St", "street2":
         "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107", "country":
         "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
         null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
         {}}, "carrier_accounts": [], "pickup_rates": [{"mode": "test", "service":
-        "NextDay", "rate": "0.00", "currency": "USD", "created_at": "2023-05-15T21:49:54Z",
-        "updated_at": "2023-05-15T21:49:54Z", "carrier": "USPS", "pickup_id": "pickup_0c2c33d249cc4982a1bc78c2c1a8d210",
-        "id": "pickuprate_9cb256a78fbc459483c538f961df8ee1", "object": "PickupRate"}]}'
+        "NextDay", "rate": "0.00", "currency": "USD", "created_at": "2023-11-28T22:00:12Z",
+        "updated_at": "2023-11-28T22:00:12Z", "carrier": "USPS", "pickup_id": "pickup_9860cb6ae0bd4f149c53248ff9048351",
+        "id": "pickuprate_d3971cc0f27b4af3a1b9ef31c419a1e8", "object": "PickupRate"}]}'
     headers:
       cache-control:
       - private, no-cache, no-store
@@ -212,8 +217,6 @@ interactions:
       - '1157'
       content-type:
       - application/json; charset=utf-8
-      etag:
-      - W/"f002ace5802a47aa70b31e84fc506349"
       expires:
       - '0'
       pragma:
@@ -231,20 +234,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 3ecd17946462a900e2b98c34000891d5
+      - ae35d0b8656662ebe78a93ce003d9288
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb2nuq
+      - bigweb33nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq a29e4ad05c
-      - extlb1nuq 5ab12a3ed2
+      - intlb1nuq b3de2c47ef
+      - extlb2nuq 003ad9bca0
       x-runtime:
-      - '1.522076'
+      - '0.921440'
       x-version-label:
-      - easypost-202305152107-770224374c-master
+      - easypost-202311250013-a0f06fbc2c-master
       x-xss-protection:
       - 1; mode=block
     status:
