--- a/tests/cassettes/test_rate_retrieve.yaml
+++ b/tests/cassettes/test_rate_retrieve.yaml
@@ -6,7 +6,7 @@ interactions:
       "to_address": {"name": "Elizabeth Swan", "street1": "179 N Harbor Dr", "city":
       "Redondo Beach", "state": "CA", "zip": "90277", "country": "US", "email": "test@example.com",
       "phone": "5555555555"}, "parcel": {"length": 10, "width": 8, "height": 4, "weight":
-      15.4}}, "carbon_offset": false}'
+      15.4}}}'
     headers:
       Accept:
       - '*/*'
@@ -15,7 +15,7 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '520'
+      - '496'
       Content-Type:
       - application/json
       authorization:
@@ -26,95 +26,100 @@ interactions:
     uri: https://api.easypost.com/v2/shipments
   response:
     body:
-      string: '{"created_at": "2023-05-15T18:11:04Z", "is_return": false, "messages":
-        [{"carrier": "DhlEcs", "carrier_account_id": "ca_0d64fd488c1444cf9bc16f858703e28f",
+      string: '{"created_at": "2023-11-28T22:03:05Z", "is_return": false, "messages":
+        [{"carrier": "DhlEcs", "carrier_account_id": "ca_b1a0a1bc45844159812e0224d53948ea",
+        "type": "rate_error", "message": "Unauthorized. Please check credentials and
+        try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_c7b4cfaf671b4984b84023d77561394a",
         "type": "rate_error", "message": "Unauthorized. Please check credentials and
         try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_c3cbbd21bc97400bbbaed6d030909476",
         "type": "rate_error", "message": "Unauthorized. Please check credentials and
         try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_99007e1aeb66421faf82676f1199481e",
         "type": "rate_error", "message": "Unauthorized. Please check credentials and
-        try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_c7b4cfaf671b4984b84023d77561394a",
+        try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_0d64fd488c1444cf9bc16f858703e28f",
         "type": "rate_error", "message": "Unauthorized. Please check credentials and
         try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_711d8c4f9be54801b984e5dc9f2b5a7c",
         "type": "rate_error", "message": "Unauthorized. Please check credentials and
-        try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_b1a0a1bc45844159812e0224d53948ea",
-        "type": "rate_error", "message": "Unauthorized. Please check credentials and
         try again"}], "mode": "test", "options": {"currency": "USD", "payment": {"type":
         "SENDER"}, "date_advance": 0}, "reference": null, "status": "unknown", "tracking_code":
-        null, "updated_at": "2023-05-15T18:11:05Z", "batch_id": null, "batch_status":
+        null, "updated_at": "2023-11-28T22:03:05Z", "batch_id": null, "batch_status":
         null, "batch_message": null, "customs_info": null, "from_address": {"id":
-        "adr_db21d518f34b11ed8e63ac1f6b0a0d1e", "object": "Address", "created_at":
-        "2023-05-15T18:11:04+00:00", "updated_at": "2023-05-15T18:11:04+00:00", "name":
+        "adr_e7e63b478e3911ee8e65ac1f6bc539ae", "object": "Address", "created_at":
+        "2023-11-28T22:03:04+00:00", "updated_at": "2023-11-28T22:03:04+00:00", "name":
         "Jack Sparrow", "company": null, "street1": "388 Townsend St", "street2":
         "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107", "country":
         "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
         null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
-        {}}, "insurance": null, "order_id": null, "parcel": {"id": "prcl_f5a7d63d9d064e7ea095cac03d658c90",
-        "object": "Parcel", "created_at": "2023-05-15T18:11:04Z", "updated_at": "2023-05-15T18:11:04Z",
+        {}}, "insurance": null, "order_id": null, "parcel": {"id": "prcl_3010e359999e4d3c9d811014eca7fc43",
+        "object": "Parcel", "created_at": "2023-11-28T22:03:05Z", "updated_at": "2023-11-28T22:03:05Z",
         "length": 10.0, "width": 8.0, "height": 4.0, "predefined_package": null, "weight":
-        15.4, "mode": "test"}, "postage_label": null, "rates": [{"id": "rate_7a4ca00785d84f26adeffde144851009",
-        "object": "Rate", "created_at": "2023-05-15T18:11:05Z", "updated_at": "2023-05-15T18:11:05Z",
-        "mode": "test", "service": "ParcelSelect", "carrier": "USPS", "rate": "6.76",
-        "currency": "USD", "retail_rate": "7.75", "retail_currency": "USD", "list_rate":
-        "7.75", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
-        5, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        5, "shipment_id": "shp_c8d674f4c09146dfa38ce27c9407c866", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_c83acc4163b546e78216f0ed2ced2b15",
-        "object": "Rate", "created_at": "2023-05-15T18:11:05Z", "updated_at": "2023-05-15T18:11:05Z",
-        "mode": "test", "service": "Priority", "carrier": "USPS", "rate": "7.15",
+        15.4, "mode": "test"}, "postage_label": null, "rates": [{"id": "rate_48c9b3a844974166b9894bd64bccaeb3",
+        "object": "Rate", "created_at": "2023-11-28T22:03:05Z", "updated_at": "2023-11-28T22:03:05Z",
+        "mode": "test", "service": "Express", "carrier": "USPS", "rate": "31.25",
+        "currency": "USD", "retail_rate": "35.80", "retail_currency": "USD", "list_rate":
+        "31.25", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
+        null, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
+        null, "shipment_id": "shp_03ed93eb66f6411e8017bcee5bb14481", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_1132b97a503449c28cfc7c1c9aefb065",
+        "object": "Rate", "created_at": "2023-11-28T22:03:05Z", "updated_at": "2023-11-28T22:03:05Z",
+        "mode": "test", "service": "Priority", "carrier": "USPS", "rate": "6.95",
         "currency": "USD", "retail_rate": "10.20", "retail_currency": "USD", "list_rate":
         "8.24", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
         2, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        2, "shipment_id": "shp_c8d674f4c09146dfa38ce27c9407c866", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_d69fdc7be5624ef888f980a06d5f9bd2",
-        "object": "Rate", "created_at": "2023-05-15T18:11:05Z", "updated_at": "2023-05-15T18:11:05Z",
-        "mode": "test", "service": "First", "carrier": "USPS", "rate": "6.07", "currency":
-        "USD", "retail_rate": "6.07", "retail_currency": "USD", "list_rate": "6.07",
+        2, "shipment_id": "shp_03ed93eb66f6411e8017bcee5bb14481", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_6b57b8b7f82141f7a2ab70ac9978033a",
+        "object": "Rate", "created_at": "2023-11-28T22:03:05Z", "updated_at": "2023-11-28T22:03:05Z",
+        "mode": "test", "service": "GroundAdvantage", "carrier": "USPS", "rate": "5.93",
+        "currency": "USD", "retail_rate": "8.00", "retail_currency": "USD", "list_rate":
+        "6.07", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
+        3, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
+        3, "shipment_id": "shp_03ed93eb66f6411e8017bcee5bb14481", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_11044f506652442c948aeb0a4861003b",
+        "object": "Rate", "created_at": "2023-11-28T22:03:05Z", "updated_at": "2023-11-28T22:03:05Z",
+        "mode": "test", "service": "First", "carrier": "USPS", "rate": "5.93", "currency":
+        "USD", "retail_rate": "8.00", "retail_currency": "USD", "list_rate": "6.07",
         "list_currency": "USD", "billing_type": "easypost", "delivery_days": 3, "delivery_date":
         null, "delivery_date_guaranteed": false, "est_delivery_days": 3, "shipment_id":
-        "shp_c8d674f4c09146dfa38ce27c9407c866", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"},
-        {"id": "rate_1dd6bae25d9744d1908d3aee7de10bd3", "object": "Rate", "created_at":
-        "2023-05-15T18:11:05Z", "updated_at": "2023-05-15T18:11:05Z", "mode": "test",
-        "service": "Express", "carrier": "USPS", "rate": "31.25", "currency": "USD",
-        "retail_rate": "35.80", "retail_currency": "USD", "list_rate": "31.25", "list_currency":
-        "USD", "billing_type": "easypost", "delivery_days": null, "delivery_date":
-        null, "delivery_date_guaranteed": false, "est_delivery_days": null, "shipment_id":
-        "shp_c8d674f4c09146dfa38ce27c9407c866", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"}],
+        "shp_03ed93eb66f6411e8017bcee5bb14481", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"},
+        {"id": "rate_ccc6fa0610294a4a92ceecc80701a4ca", "object": "Rate", "created_at":
+        "2023-11-28T22:03:05Z", "updated_at": "2023-11-28T22:03:05Z", "mode": "test",
+        "service": "ParcelSelect", "carrier": "USPS", "rate": "5.93", "currency":
+        "USD", "retail_rate": "8.00", "retail_currency": "USD", "list_rate": "6.07",
+        "list_currency": "USD", "billing_type": "easypost", "delivery_days": 3, "delivery_date":
+        null, "delivery_date_guaranteed": false, "est_delivery_days": 3, "shipment_id":
+        "shp_03ed93eb66f6411e8017bcee5bb14481", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"}],
         "refund_status": null, "scan_form": null, "selected_rate": null, "tracker":
-        null, "to_address": {"id": "adr_db1f9331f34b11ed866dac1f6bc7bdc6", "object":
-        "Address", "created_at": "2023-05-15T18:11:04+00:00", "updated_at": "2023-05-15T18:11:04+00:00",
+        null, "to_address": {"id": "adr_e7e3d7ea8e3911ee8442ac1f6bc539aa", "object":
+        "Address", "created_at": "2023-11-28T22:03:04+00:00", "updated_at": "2023-11-28T22:03:04+00:00",
         "name": "Elizabeth Swan", "company": null, "street1": "179 N Harbor Dr", "street2":
         null, "city": "Redondo Beach", "state": "CA", "zip": "90277", "country": "US",
         "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
         null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
-        {}}, "usps_zone": 4, "return_address": {"id": "adr_db21d518f34b11ed8e63ac1f6b0a0d1e",
-        "object": "Address", "created_at": "2023-05-15T18:11:04+00:00", "updated_at":
-        "2023-05-15T18:11:04+00:00", "name": "Jack Sparrow", "company": null, "street1":
+        {}}, "usps_zone": 4, "return_address": {"id": "adr_e7e63b478e3911ee8e65ac1f6bc539ae",
+        "object": "Address", "created_at": "2023-11-28T22:03:04+00:00", "updated_at":
+        "2023-11-28T22:03:04+00:00", "name": "Jack Sparrow", "company": null, "street1":
         "388 Townsend St", "street2": "Apt 20", "city": "San Francisco", "state":
         "CA", "zip": "94107", "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>",
         "mode": "test", "carrier_facility": null, "residential": null, "federal_tax_id":
         null, "state_tax_id": null, "verifications": {}}, "buyer_address": {"id":
-        "adr_db1f9331f34b11ed866dac1f6bc7bdc6", "object": "Address", "created_at":
-        "2023-05-15T18:11:04+00:00", "updated_at": "2023-05-15T18:11:04+00:00", "name":
+        "adr_e7e3d7ea8e3911ee8442ac1f6bc539aa", "object": "Address", "created_at":
+        "2023-11-28T22:03:04+00:00", "updated_at": "2023-11-28T22:03:04+00:00", "name":
         "Elizabeth Swan", "company": null, "street1": "179 N Harbor Dr", "street2":
         null, "city": "Redondo Beach", "state": "CA", "zip": "90277", "country": "US",
         "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
         null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
-        {}}, "forms": [], "fees": [], "id": "shp_c8d674f4c09146dfa38ce27c9407c866",
+        {}}, "forms": [], "fees": [], "id": "shp_03ed93eb66f6411e8017bcee5bb14481",
         "object": "Shipment"}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '5851'
+      - '6394'
       content-type:
       - application/json; charset=utf-8
-      etag:
-      - W/"771d160f7d8c6f346fd3a8f6e166db96"
       expires:
       - '0'
       location:
-      - /api/v2/shipments/shp_c8d674f4c09146dfa38ce27c9407c866
+      - /api/v2/shipments/shp_03ed93eb66f6411e8017bcee5bb14481
       pragma:
       - no-cache
       referrer-policy:
@@ -130,20 +135,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 44e495af646275b8e78751e90023fc43
+      - ae35d0b665666398e78a9789003e6cd6
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb5nuq
+      - bigweb31nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq a29e4ad05c
-      - extlb2nuq 5ab12a3ed2
+      - intlb2nuq b3de2c47ef
+      - extlb2nuq 003ad9bca0
       x-runtime:
-      - '0.926748'
+      - '0.701225'
       x-version-label:
-      - easypost-202305151637-e5ce91ee24-master
+      - easypost-202311250013-a0f06fbc2c-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -163,25 +168,23 @@ interactions:
       user-agent:
       - <REDACTED>
     method: GET
-    uri: https://api.easypost.com/v2/rates/rate_7a4ca00785d84f26adeffde144851009
+    uri: https://api.easypost.com/v2/rates/rate_48c9b3a844974166b9894bd64bccaeb3
   response:
     body:
-      string: '{"id": "rate_7a4ca00785d84f26adeffde144851009", "object": "Rate", "created_at":
-        "2023-05-15T18:11:05Z", "updated_at": "2023-05-15T18:11:05Z", "mode": "test",
-        "service": "ParcelSelect", "carrier": "USPS", "rate": "6.76", "currency":
-        "USD", "retail_rate": "7.75", "retail_currency": "USD", "list_rate": "7.75",
-        "list_currency": "USD", "billing_type": "easypost", "delivery_days": 5, "delivery_date":
-        null, "delivery_date_guaranteed": false, "est_delivery_days": 5, "shipment_id":
-        "shp_c8d674f4c09146dfa38ce27c9407c866", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"}'
+      string: '{"id": "rate_48c9b3a844974166b9894bd64bccaeb3", "object": "Rate", "created_at":
+        "2023-11-28T22:03:05Z", "updated_at": "2023-11-28T22:03:05Z", "mode": "test",
+        "service": "Express", "carrier": "USPS", "rate": "31.25", "currency": "USD",
+        "retail_rate": "35.80", "retail_currency": "USD", "list_rate": "31.25", "list_currency":
+        "USD", "billing_type": "easypost", "delivery_days": null, "delivery_date":
+        null, "delivery_date_guaranteed": false, "est_delivery_days": null, "shipment_id":
+        "shp_03ed93eb66f6411e8017bcee5bb14481", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '539'
+      - '543'
       content-type:
       - application/json; charset=utf-8
-      etag:
-      - W/"5be323f32739ace01ee4d9280fe22914"
       expires:
       - '0'
       pragma:
@@ -194,25 +197,27 @@ interactions:
       - chunked
       x-backend:
       - easypost
+      x-canary:
+      - direct
       x-content-type-options:
       - nosniff
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 44e495af646275b9e78751e90023fca2
+      - ae35d0b66566639ae78a9789003e6e5f
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb1nuq
+      - bigweb43nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq a29e4ad05c
-      - extlb2nuq 5ab12a3ed2
+      - intlb1nuq b3de2c47ef
+      - extlb2nuq 003ad9bca0
       x-runtime:
-      - '0.186967'
+      - '0.214577'
       x-version-label:
-      - easypost-202305151637-e5ce91ee24-master
+      - easypost-202311250013-a0f06fbc2c-master
       x-xss-protection:
       - 1; mode=block
     status:
