--- a/tests/cassettes/test_scanform_create.yaml
+++ b/tests/cassettes/test_scanform_create.yaml
@@ -7,7 +7,7 @@ interactions:
       "state": "CA", "zip": "90277", "country": "US", "email": "test@example.com",
       "phone": "5555555555"}, "parcel": {"length": 10, "width": 8, "height": 4, "weight":
       15.4}, "service": "First", "carrier_accounts": ["ca_b25657e9896e4d63ac8151ac346ac41e"],
-      "carrier": "USPS"}, "carbon_offset": false}'
+      "carrier": "USPS"}}'
     headers:
       Accept:
       - '*/*'
@@ -16,7 +16,7 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '620'
+      - '596'
       Content-Type:
       - application/json
       authorization:
@@ -27,110 +27,115 @@ interactions:
     uri: https://api.easypost.com/v2/shipments
   response:
     body:
-      string: '{"created_at": "2023-05-16T15:35:31Z", "is_return": false, "messages":
+      string: '{"created_at": "2023-11-28T22:03:07Z", "is_return": false, "messages":
         [], "mode": "test", "options": {"currency": "USD", "payment": {"type": "SENDER"},
         "date_advance": 0}, "reference": null, "status": "unknown", "tracking_code":
-        "9400100104262210322148", "updated_at": "2023-05-16T15:35:32Z", "batch_id":
+        "9400100105442285862681", "updated_at": "2023-11-28T22:03:07Z", "batch_id":
         null, "batch_status": null, "batch_message": null, "customs_info": null, "from_address":
-        {"id": "adr_4af61f14f3ff11edb181ac1f6bc72124", "object": "Address", "created_at":
-        "2023-05-16T15:35:31+00:00", "updated_at": "2023-05-16T15:35:31+00:00", "name":
+        {"id": "adr_e91b8c6b8e3911ee88f6ac1f6bc53342", "object": "Address", "created_at":
+        "2023-11-28T22:03:07+00:00", "updated_at": "2023-11-28T22:03:07+00:00", "name":
         "Elizabeth Swan", "company": null, "street1": "179 N Harbor Dr", "street2":
         null, "city": "Redondo Beach", "state": "CA", "zip": "90277", "country": "US",
         "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
         null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
-        {}}, "insurance": null, "order_id": null, "parcel": {"id": "prcl_97a9b127466144618d467aa475905b33",
-        "object": "Parcel", "created_at": "2023-05-16T15:35:31Z", "updated_at": "2023-05-16T15:35:31Z",
+        {}}, "insurance": null, "order_id": null, "parcel": {"id": "prcl_8ea8d4a879fe4aa594ccc47cab13ae7a",
+        "object": "Parcel", "created_at": "2023-11-28T22:03:07Z", "updated_at": "2023-11-28T22:03:07Z",
         "length": 10.0, "width": 8.0, "height": 4.0, "predefined_package": null, "weight":
-        15.4, "mode": "test"}, "postage_label": {"object": "PostageLabel", "id": "pl_99b94a85b2234933a2e3f2d90752e96a",
-        "created_at": "2023-05-16T15:35:32Z", "updated_at": "2023-05-16T15:35:32Z",
-        "date_advance": 0, "integrated_form": "none", "label_date": "2023-05-16T15:35:32Z",
+        15.4, "mode": "test"}, "postage_label": {"object": "PostageLabel", "id": "pl_6b83022b69f6419db90e7a63eda23e1d",
+        "created_at": "2023-11-28T22:03:07Z", "updated_at": "2023-11-28T22:03:07Z",
+        "date_advance": 0, "integrated_form": "none", "label_date": "2023-11-28T22:03:07Z",
         "label_resolution": 300, "label_size": "4x6", "label_type": "default", "label_file_type":
-        "image/png", "label_url": "https://easypost-files.s3.us-west-2.amazonaws.com/files/postage_label/20230516/ceff03b2653c4b36850eb2081fadeb7f.png",
+        "image/png", "label_url": "https://easypost-files.s3.us-west-2.amazonaws.com/files/postage_label/20231128/e8e7f13c1c311b49399defba60e68b3525.png",
         "label_pdf_url": null, "label_zpl_url": null, "label_epl2_url": null, "label_file":
-        null}, "rates": [{"id": "rate_264cf6b604004861aec1bdfe9c752977", "object":
-        "Rate", "created_at": "2023-05-16T15:35:32Z", "updated_at": "2023-05-16T15:35:32Z",
+        null}, "rates": [{"id": "rate_cf35b9fa5f8243419e9d99daf91c3e7a", "object":
+        "Rate", "created_at": "2023-11-28T22:03:07Z", "updated_at": "2023-11-28T22:03:07Z",
         "mode": "test", "service": "Express", "carrier": "USPS", "rate": "31.25",
         "currency": "USD", "retail_rate": "35.80", "retail_currency": "USD", "list_rate":
         "31.25", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
         null, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        null, "shipment_id": "shp_ecb4968651e7484eabaed3825d1100ed", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_ab93efcacbc7424e8c19a4612902c982",
-        "object": "Rate", "created_at": "2023-05-16T15:35:32Z", "updated_at": "2023-05-16T15:35:32Z",
-        "mode": "test", "service": "ParcelSelect", "carrier": "USPS", "rate": "6.76",
-        "currency": "USD", "retail_rate": "7.75", "retail_currency": "USD", "list_rate":
-        "7.75", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
-        5, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        5, "shipment_id": "shp_ecb4968651e7484eabaed3825d1100ed", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_142b77c6d9e9485e865fecb816825970",
-        "object": "Rate", "created_at": "2023-05-16T15:35:32Z", "updated_at": "2023-05-16T15:35:32Z",
-        "mode": "test", "service": "Priority", "carrier": "USPS", "rate": "7.15",
+        null, "shipment_id": "shp_3b18a7335d8144e8951c37fb8e9a3828", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_0370cd6af9b7441189ff1425ab0d3849",
+        "object": "Rate", "created_at": "2023-11-28T22:03:07Z", "updated_at": "2023-11-28T22:03:07Z",
+        "mode": "test", "service": "Priority", "carrier": "USPS", "rate": "6.95",
         "currency": "USD", "retail_rate": "10.20", "retail_currency": "USD", "list_rate":
         "8.24", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
         2, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        2, "shipment_id": "shp_ecb4968651e7484eabaed3825d1100ed", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_159ad3a23fa641dbb2f33bb9bfbbafdc",
-        "object": "Rate", "created_at": "2023-05-16T15:35:32Z", "updated_at": "2023-05-16T15:35:32Z",
-        "mode": "test", "service": "First", "carrier": "USPS", "rate": "6.07", "currency":
-        "USD", "retail_rate": "6.07", "retail_currency": "USD", "list_rate": "6.07",
+        2, "shipment_id": "shp_3b18a7335d8144e8951c37fb8e9a3828", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_1f4c4fe7c2a0450fb23974899bf0d758",
+        "object": "Rate", "created_at": "2023-11-28T22:03:07Z", "updated_at": "2023-11-28T22:03:07Z",
+        "mode": "test", "service": "GroundAdvantage", "carrier": "USPS", "rate": "5.93",
+        "currency": "USD", "retail_rate": "8.00", "retail_currency": "USD", "list_rate":
+        "6.07", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
+        3, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
+        3, "shipment_id": "shp_3b18a7335d8144e8951c37fb8e9a3828", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_9be88ec5a3bf4475a6bc3e3af45f618c",
+        "object": "Rate", "created_at": "2023-11-28T22:03:07Z", "updated_at": "2023-11-28T22:03:07Z",
+        "mode": "test", "service": "First", "carrier": "USPS", "rate": "5.93", "currency":
+        "USD", "retail_rate": "8.00", "retail_currency": "USD", "list_rate": "6.07",
         "list_currency": "USD", "billing_type": "easypost", "delivery_days": 3, "delivery_date":
         null, "delivery_date_guaranteed": false, "est_delivery_days": 3, "shipment_id":
-        "shp_ecb4968651e7484eabaed3825d1100ed", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"}],
-        "refund_status": null, "scan_form": null, "selected_rate": {"id": "rate_159ad3a23fa641dbb2f33bb9bfbbafdc",
-        "object": "Rate", "created_at": "2023-05-16T15:35:32Z", "updated_at": "2023-05-16T15:35:32Z",
-        "mode": "test", "service": "First", "carrier": "USPS", "rate": "6.07", "currency":
-        "USD", "retail_rate": "6.07", "retail_currency": "USD", "list_rate": "6.07",
+        "shp_3b18a7335d8144e8951c37fb8e9a3828", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"},
+        {"id": "rate_93e91a08a94641408f8d9ba08ebdab5a", "object": "Rate", "created_at":
+        "2023-11-28T22:03:07Z", "updated_at": "2023-11-28T22:03:07Z", "mode": "test",
+        "service": "ParcelSelect", "carrier": "USPS", "rate": "5.93", "currency":
+        "USD", "retail_rate": "8.00", "retail_currency": "USD", "list_rate": "6.07",
         "list_currency": "USD", "billing_type": "easypost", "delivery_days": 3, "delivery_date":
         null, "delivery_date_guaranteed": false, "est_delivery_days": 3, "shipment_id":
-        "shp_ecb4968651e7484eabaed3825d1100ed", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"},
-        "tracker": {"id": "trk_73bffbfc8c0a4eefab463dd925395cfe", "object": "Tracker",
-        "mode": "test", "tracking_code": "9400100104262210322148", "status": "unknown",
-        "status_detail": "unknown", "created_at": "2023-05-16T15:35:32Z", "updated_at":
-        "2023-05-16T15:35:32Z", "signed_by": null, "weight": null, "est_delivery_date":
-        null, "shipment_id": "shp_ecb4968651e7484eabaed3825d1100ed", "carrier": "USPS",
+        "shp_3b18a7335d8144e8951c37fb8e9a3828", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"}],
+        "refund_status": null, "scan_form": null, "selected_rate": {"id": "rate_9be88ec5a3bf4475a6bc3e3af45f618c",
+        "object": "Rate", "created_at": "2023-11-28T22:03:07Z", "updated_at": "2023-11-28T22:03:07Z",
+        "mode": "test", "service": "First", "carrier": "USPS", "rate": "5.93", "currency":
+        "USD", "retail_rate": "8.00", "retail_currency": "USD", "list_rate": "6.07",
+        "list_currency": "USD", "billing_type": "easypost", "delivery_days": 3, "delivery_date":
+        null, "delivery_date_guaranteed": false, "est_delivery_days": 3, "shipment_id":
+        "shp_3b18a7335d8144e8951c37fb8e9a3828", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"},
+        "tracker": {"id": "trk_deab6ef3e7864284ad8e0f5d1b4ef848", "object": "Tracker",
+        "mode": "test", "tracking_code": "9400100105442285862681", "status": "unknown",
+        "status_detail": "unknown", "created_at": "2023-11-28T22:03:07Z", "updated_at":
+        "2023-11-28T22:03:07Z", "signed_by": null, "weight": null, "est_delivery_date":
+        null, "shipment_id": "shp_3b18a7335d8144e8951c37fb8e9a3828", "carrier": "USPS",
         "tracking_details": [], "fees": [], "carrier_detail": null, "public_url":
-        "https://track.easypost.com/djE6dHJrXzczYmZmYmZjOGMwYTRlZWZhYjQ2M2RkOTI1Mzk1Y2Zl"},
-        "to_address": {"id": "adr_4af3f434f3ff11edb17dac1f6bc72124", "object": "Address",
-        "created_at": "2023-05-16T15:35:31+00:00", "updated_at": "2023-05-16T15:35:32+00:00",
+        "https://track.easypost.com/djE6dHJrX2RlYWI2ZWYzZTc4NjQyODRhZDhlMGY1ZDFiNGVmODQ4"},
+        "to_address": {"id": "adr_e91979be8e3911ee88eeac1f6bc53342", "object": "Address",
+        "created_at": "2023-11-28T22:03:07+00:00", "updated_at": "2023-11-28T22:03:07+00:00",
         "name": "JACK SPARROW", "company": null, "street1": "388 TOWNSEND ST APT 20",
-        "street2": null, "city": "SAN FRANCISCO", "state": "CA", "zip": "94107-1670",
+        "street2": "", "city": "SAN FRANCISCO", "state": "CA", "zip": "94107-1670",
         "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test",
         "carrier_facility": null, "residential": true, "federal_tax_id": null, "state_tax_id":
         null, "verifications": {"zip4": {"success": true, "errors": [], "details":
         null}, "delivery": {"success": true, "errors": [], "details": {"latitude":
         37.77551, "longitude": -122.39697, "time_zone": "America/Los_Angeles"}}}},
-        "usps_zone": 4, "return_address": {"id": "adr_4af61f14f3ff11edb181ac1f6bc72124",
-        "object": "Address", "created_at": "2023-05-16T15:35:31+00:00", "updated_at":
-        "2023-05-16T15:35:31+00:00", "name": "Elizabeth Swan", "company": null, "street1":
+        "usps_zone": 4, "return_address": {"id": "adr_e91b8c6b8e3911ee88f6ac1f6bc53342",
+        "object": "Address", "created_at": "2023-11-28T22:03:07+00:00", "updated_at":
+        "2023-11-28T22:03:07+00:00", "name": "Elizabeth Swan", "company": null, "street1":
         "179 N Harbor Dr", "street2": null, "city": "Redondo Beach", "state": "CA",
         "zip": "90277", "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>",
         "mode": "test", "carrier_facility": null, "residential": null, "federal_tax_id":
         null, "state_tax_id": null, "verifications": {}}, "buyer_address": {"id":
-        "adr_4af3f434f3ff11edb17dac1f6bc72124", "object": "Address", "created_at":
-        "2023-05-16T15:35:31+00:00", "updated_at": "2023-05-16T15:35:32+00:00", "name":
+        "adr_e91979be8e3911ee88eeac1f6bc53342", "object": "Address", "created_at":
+        "2023-11-28T22:03:07+00:00", "updated_at": "2023-11-28T22:03:07+00:00", "name":
         "JACK SPARROW", "company": null, "street1": "388 TOWNSEND ST APT 20", "street2":
-        null, "city": "SAN FRANCISCO", "state": "CA", "zip": "94107-1670", "country":
+        "", "city": "SAN FRANCISCO", "state": "CA", "zip": "94107-1670", "country":
         "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
         null, "residential": true, "federal_tax_id": null, "state_tax_id": null, "verifications":
         {"zip4": {"success": true, "errors": [], "details": null}, "delivery": {"success":
         true, "errors": [], "details": {"latitude": 37.77551, "longitude": -122.39697,
         "time_zone": "America/Los_Angeles"}}}}, "forms": [], "fees": [{"object": "Fee",
         "type": "LabelFee", "amount": "0.00000", "charged": true, "refunded": false},
-        {"object": "Fee", "type": "PostageFee", "amount": "6.07000", "charged": true,
-        "refunded": false}], "id": "shp_ecb4968651e7484eabaed3825d1100ed", "object":
+        {"object": "Fee", "type": "PostageFee", "amount": "5.93000", "charged": true,
+        "refunded": false}], "id": "shp_3b18a7335d8144e8951c37fb8e9a3828", "object":
         "Shipment"}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '6985'
+      - '7526'
       content-type:
       - application/json; charset=utf-8
-      etag:
-      - W/"780f5f44d89d99eb296ade65940a69d6"
       expires:
       - '0'
       location:
-      - /api/v2/shipments/shp_ecb4968651e7484eabaed3825d1100ed
+      - /api/v2/shipments/shp_3b18a7335d8144e8951c37fb8e9a3828
       pragma:
       - no-cache
       referrer-policy:
@@ -146,27 +151,27 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - de846e046463a2c3e786b3da00251097
+      - ae35d0b36566639ae78a978a003e6f76
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb12nuq
+      - bigweb42nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq a29e4ad05c
-      - extlb1nuq 5ab12a3ed2
+      - intlb1nuq b3de2c47ef
+      - extlb2nuq 003ad9bca0
       x-runtime:
-      - '1.196224'
+      - '1.024325'
       x-version-label:
-      - easypost-202305152249-750e1e7d95-master
+      - easypost-202311250013-a0f06fbc2c-master
       x-xss-protection:
       - 1; mode=block
     status:
       code: 201
       message: Created
 - request:
-    body: '{"scan_form": {"shipment": [{"id": "shp_ecb4968651e7484eabaed3825d1100ed"}]}}'
+    body: '{"scan_form": {"shipment": [{"id": "shp_3b18a7335d8144e8951c37fb8e9a3828"}]}}'
     headers:
       Accept:
       - '*/*'
@@ -186,27 +191,25 @@ interactions:
     uri: https://api.easypost.com/v2/scan_forms
   response:
     body:
-      string: '{"id": "sf_4bc2f73b448747db89c9023c0dcfc53a", "object": "ScanForm",
-        "created_at": "2023-05-16T15:35:33Z", "updated_at": "2023-05-16T15:35:33Z",
-        "tracking_codes": ["9400100104262210322148"], "address": {"id": "adr_4af61f14f3ff11edb181ac1f6bc72124",
-        "object": "Address", "created_at": "2023-05-16T15:35:31+00:00", "updated_at":
-        "2023-05-16T15:35:31+00:00", "name": "Elizabeth Swan", "company": null, "street1":
+      string: '{"id": "sf_3c5c5b35c1144bfa9c39bd22b52fce2d", "object": "ScanForm",
+        "created_at": "2023-11-28T22:03:08Z", "updated_at": "2023-11-28T22:03:08Z",
+        "tracking_codes": ["9400100105442285862681"], "address": {"id": "adr_e91b8c6b8e3911ee88f6ac1f6bc53342",
+        "object": "Address", "created_at": "2023-11-28T22:03:07+00:00", "updated_at":
+        "2023-11-28T22:03:07+00:00", "name": "Elizabeth Swan", "company": null, "street1":
         "179 N Harbor Dr", "street2": null, "city": "Redondo Beach", "state": "CA",
         "zip": "90277", "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>",
         "mode": "test", "carrier_facility": null, "residential": null, "federal_tax_id":
         null, "state_tax_id": null, "verifications": {}}, "status": "created", "message":
-        null, "form_url": "https://easypost-files.s3.us-west-2.amazonaws.com/files/scan_form/20230516/5b62bfdffb694512ac744379dac2b304.pdf",
-        "form_file_type": null, "batch_id": "batch_1556ea8d81c94d07911dd0eab99ec9fe",
+        null, "form_url": "https://easypost-files.s3.us-west-2.amazonaws.com/files/scan_form/20231128/e8240f3ff9915040b8ad655e32c484d477.pdf",
+        "form_file_type": null, "batch_id": "batch_5f9ca1835aab47edbd73da98526f75c0",
         "confirmation": null}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '903'
+      - '905'
       content-type:
       - application/json; charset=utf-8
-      etag:
-      - W/"5ee033e6280694807472ab060a3d0f0a"
       expires:
       - '0'
       pragma:
@@ -224,20 +227,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - de846e046463a2c5e786b3da00251108
+      - ae35d0b36566639ce78a978a003e7109
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb2nuq
+      - bigweb40nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq a29e4ad05c
-      - extlb1nuq 5ab12a3ed2
+      - intlb1nuq b3de2c47ef
+      - extlb2nuq 003ad9bca0
       x-runtime:
-      - '0.314620'
+      - '0.358192'
       x-version-label:
-      - easypost-202305152249-750e1e7d95-master
+      - easypost-202311250013-a0f06fbc2c-master
       x-xss-protection:
       - 1; mode=block
     status:
