--- a/tests/cassettes/test_shipment_create.yaml
+++ b/tests/cassettes/test_shipment_create.yaml
@@ -11,7 +11,7 @@ interactions:
       "", "restriction_type": "none", "non_delivery_option": "return", "customs_items":
       [{"description": "Sweet shirts", "quantity": 2, "weight": 11, "value": 23.25,
       "hs_tariff_number": "654321", "origin_country": "US"}]}, "options": {"label_format":
-      "PNG", "invoice_number": "123"}, "reference": "123"}, "carbon_offset": false}'
+      "PNG", "invoice_number": "123"}, "reference": "123"}}'
     headers:
       Accept:
       - '*/*'
@@ -20,7 +20,7 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '978'
+      - '954'
       Content-Type:
       - application/json
       authorization:
@@ -31,106 +31,111 @@ interactions:
     uri: https://api.easypost.com/v2/shipments
   response:
     body:
-      string: '{"created_at": "2023-05-16T16:31:26Z", "is_return": false, "messages":
-        [{"carrier": "DhlEcs", "carrier_account_id": "ca_99007e1aeb66421faf82676f1199481e",
+      string: '{"created_at": "2023-11-28T22:08:46Z", "is_return": false, "messages":
+        [{"carrier": "DhlEcs", "carrier_account_id": "ca_b1a0a1bc45844159812e0224d53948ea",
+        "type": "rate_error", "message": "shipment.customs_info.customs_items.0.code:
+        field required"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_c7b4cfaf671b4984b84023d77561394a",
         "type": "rate_error", "message": "shipment.customs_info.customs_items.0.code:
         field required"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_c3cbbd21bc97400bbbaed6d030909476",
         "type": "rate_error", "message": "shipment.customs_info.customs_items.0.code:
         field required"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_0d64fd488c1444cf9bc16f858703e28f",
         "type": "rate_error", "message": "shipment.customs_info.customs_items.0.code:
+        field required"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_99007e1aeb66421faf82676f1199481e",
+        "type": "rate_error", "message": "shipment.customs_info.customs_items.0.code:
         field required"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_711d8c4f9be54801b984e5dc9f2b5a7c",
-        "type": "rate_error", "message": "shipment.customs_info.customs_items.0.code:
-        field required"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_b1a0a1bc45844159812e0224d53948ea",
-        "type": "rate_error", "message": "shipment.customs_info.customs_items.0.code:
-        field required"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_c7b4cfaf671b4984b84023d77561394a",
         "type": "rate_error", "message": "shipment.customs_info.customs_items.0.code:
         field required"}], "mode": "test", "options": {"label_format": "PNG", "invoice_number":
         "123", "currency": "USD", "payment": {"type": "SENDER"}, "date_advance": 0},
         "reference": "123", "status": "unknown", "tracking_code": null, "updated_at":
-        "2023-05-16T16:31:27Z", "batch_id": null, "batch_status": null, "batch_message":
-        null, "customs_info": {"id": "cstinfo_994a2568673740cba69fb9c41726d6c3", "object":
-        "CustomsInfo", "created_at": "2023-05-16T16:31:26Z", "updated_at": "2023-05-16T16:31:26Z",
+        "2023-11-28T22:08:47Z", "batch_id": null, "batch_status": null, "batch_message":
+        null, "customs_info": {"id": "cstinfo_0327d13c2d894f24a229494f641637e0", "object":
+        "CustomsInfo", "created_at": "2023-11-28T22:08:46Z", "updated_at": "2023-11-28T22:08:46Z",
         "contents_explanation": "", "contents_type": "merchandise", "customs_certify":
         true, "customs_signer": "Steve Brule", "eel_pfc": "NOEEI 30.37(a)", "non_delivery_option":
         "return", "restriction_comments": null, "restriction_type": "none", "mode":
-        "test", "declaration": null, "customs_items": [{"id": "cstitem_ae6bbbd3195c42c6b1879d3b253f0264",
-        "object": "CustomsItem", "created_at": "2023-05-16T16:31:26Z", "updated_at":
-        "2023-05-16T16:31:26Z", "description": "Sweet shirts", "hs_tariff_number":
+        "test", "declaration": null, "customs_items": [{"id": "cstitem_2de8abdbcc1f436f800d9dea6ee97276",
+        "object": "CustomsItem", "created_at": "2023-11-28T22:08:46Z", "updated_at":
+        "2023-11-28T22:08:46Z", "description": "Sweet shirts", "hs_tariff_number":
         "654321", "origin_country": "US", "quantity": 2, "value": "23.25", "weight":
         11.0, "code": null, "mode": "test", "manufacturer": null, "currency": null,
         "eccn": null, "printed_commodity_identifier": null}]}, "from_address": {"id":
-        "adr_1a99cd8af40711edb1d4ac1f6bc7b362", "object": "Address", "created_at":
-        "2023-05-16T16:31:26+00:00", "updated_at": "2023-05-16T16:31:26+00:00", "name":
+        "adr_b3a97c158e3a11ee88c8ac1f6bc53342", "object": "Address", "created_at":
+        "2023-11-28T22:08:46+00:00", "updated_at": "2023-11-28T22:08:46+00:00", "name":
         "Jack Sparrow", "company": null, "street1": "388 Townsend St", "street2":
         "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107", "country":
         "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
         null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
-        {}}, "insurance": null, "order_id": null, "parcel": {"id": "prcl_440119c05e614c7fb3d544380c235c43",
-        "object": "Parcel", "created_at": "2023-05-16T16:31:26Z", "updated_at": "2023-05-16T16:31:26Z",
+        {}}, "insurance": null, "order_id": null, "parcel": {"id": "prcl_d69d061286f64f82988aad80b5a6327e",
+        "object": "Parcel", "created_at": "2023-11-28T22:08:46Z", "updated_at": "2023-11-28T22:08:46Z",
         "length": 10.0, "width": 8.0, "height": 4.0, "predefined_package": null, "weight":
-        15.4, "mode": "test"}, "postage_label": null, "rates": [{"id": "rate_122aaef1a4ae4e5c8cb7605ea01cb569",
-        "object": "Rate", "created_at": "2023-05-16T16:31:27Z", "updated_at": "2023-05-16T16:31:27Z",
-        "mode": "test", "service": "Express", "carrier": "USPS", "rate": "31.25",
-        "currency": "USD", "retail_rate": "35.80", "retail_currency": "USD", "list_rate":
-        "31.25", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
-        null, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        null, "shipment_id": "shp_3672644215a9461b8eb342a3f219f0ac", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_6fc92da586f54f68a537f6d2ba0eb89f",
-        "object": "Rate", "created_at": "2023-05-16T16:31:27Z", "updated_at": "2023-05-16T16:31:27Z",
-        "mode": "test", "service": "ParcelSelect", "carrier": "USPS", "rate": "6.76",
-        "currency": "USD", "retail_rate": "7.75", "retail_currency": "USD", "list_rate":
-        "7.75", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
-        5, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        5, "shipment_id": "shp_3672644215a9461b8eb342a3f219f0ac", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_b29b1808b8bd47b2b8b351d05a541abb",
-        "object": "Rate", "created_at": "2023-05-16T16:31:27Z", "updated_at": "2023-05-16T16:31:27Z",
-        "mode": "test", "service": "Priority", "carrier": "USPS", "rate": "7.15",
+        15.4, "mode": "test"}, "postage_label": null, "rates": [{"id": "rate_e141f919c6c7422cbb0601abb82ba2a5",
+        "object": "Rate", "created_at": "2023-11-28T22:08:47Z", "updated_at": "2023-11-28T22:08:47Z",
+        "mode": "test", "service": "Priority", "carrier": "USPS", "rate": "6.95",
         "currency": "USD", "retail_rate": "10.20", "retail_currency": "USD", "list_rate":
         "8.24", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
         2, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        2, "shipment_id": "shp_3672644215a9461b8eb342a3f219f0ac", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_e8f47c58258e4ff6ab88c74917e2c79a",
-        "object": "Rate", "created_at": "2023-05-16T16:31:27Z", "updated_at": "2023-05-16T16:31:27Z",
-        "mode": "test", "service": "First", "carrier": "USPS", "rate": "6.07", "currency":
-        "USD", "retail_rate": "6.07", "retail_currency": "USD", "list_rate": "6.07",
+        2, "shipment_id": "shp_8a8edce284194529b188ccc7721cfea4", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_39490b03c05c45c2b41df3073183258b",
+        "object": "Rate", "created_at": "2023-11-28T22:08:47Z", "updated_at": "2023-11-28T22:08:47Z",
+        "mode": "test", "service": "GroundAdvantage", "carrier": "USPS", "rate": "5.93",
+        "currency": "USD", "retail_rate": "8.00", "retail_currency": "USD", "list_rate":
+        "6.07", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
+        3, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
+        3, "shipment_id": "shp_8a8edce284194529b188ccc7721cfea4", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_cc7a86f6df8e465ca07a67c6059593e3",
+        "object": "Rate", "created_at": "2023-11-28T22:08:47Z", "updated_at": "2023-11-28T22:08:47Z",
+        "mode": "test", "service": "First", "carrier": "USPS", "rate": "5.93", "currency":
+        "USD", "retail_rate": "8.00", "retail_currency": "USD", "list_rate": "6.07",
         "list_currency": "USD", "billing_type": "easypost", "delivery_days": 3, "delivery_date":
         null, "delivery_date_guaranteed": false, "est_delivery_days": 3, "shipment_id":
-        "shp_3672644215a9461b8eb342a3f219f0ac", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"}],
+        "shp_8a8edce284194529b188ccc7721cfea4", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"},
+        {"id": "rate_b88b7e03c1f640a18bfbdc034292b529", "object": "Rate", "created_at":
+        "2023-11-28T22:08:47Z", "updated_at": "2023-11-28T22:08:47Z", "mode": "test",
+        "service": "ParcelSelect", "carrier": "USPS", "rate": "5.93", "currency":
+        "USD", "retail_rate": "8.00", "retail_currency": "USD", "list_rate": "6.07",
+        "list_currency": "USD", "billing_type": "easypost", "delivery_days": 3, "delivery_date":
+        null, "delivery_date_guaranteed": false, "est_delivery_days": 3, "shipment_id":
+        "shp_8a8edce284194529b188ccc7721cfea4", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"},
+        {"id": "rate_fbbc571f1cc44fedbda02154f24c6a81", "object": "Rate", "created_at":
+        "2023-11-28T22:08:47Z", "updated_at": "2023-11-28T22:08:47Z", "mode": "test",
+        "service": "Express", "carrier": "USPS", "rate": "31.25", "currency": "USD",
+        "retail_rate": "35.80", "retail_currency": "USD", "list_rate": "31.25", "list_currency":
+        "USD", "billing_type": "easypost", "delivery_days": null, "delivery_date":
+        null, "delivery_date_guaranteed": false, "est_delivery_days": null, "shipment_id":
+        "shp_8a8edce284194529b188ccc7721cfea4", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"}],
         "refund_status": null, "scan_form": null, "selected_rate": null, "tracker":
-        null, "to_address": {"id": "adr_1a959c8df40711ed96783cecef1b359e", "object":
-        "Address", "created_at": "2023-05-16T16:31:26+00:00", "updated_at": "2023-05-16T16:31:26+00:00",
+        null, "to_address": {"id": "adr_b3a7617c8e3a11ee8622ac1f6bc539aa", "object":
+        "Address", "created_at": "2023-11-28T22:08:46+00:00", "updated_at": "2023-11-28T22:08:46+00:00",
         "name": "Elizabeth Swan", "company": null, "street1": "179 N Harbor Dr", "street2":
         null, "city": "Redondo Beach", "state": "CA", "zip": "90277", "country": "US",
         "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
         null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
-        {}}, "usps_zone": 4, "return_address": {"id": "adr_1a99cd8af40711edb1d4ac1f6bc7b362",
-        "object": "Address", "created_at": "2023-05-16T16:31:26+00:00", "updated_at":
-        "2023-05-16T16:31:26+00:00", "name": "Jack Sparrow", "company": null, "street1":
+        {}}, "usps_zone": 4, "return_address": {"id": "adr_b3a97c158e3a11ee88c8ac1f6bc53342",
+        "object": "Address", "created_at": "2023-11-28T22:08:46+00:00", "updated_at":
+        "2023-11-28T22:08:46+00:00", "name": "Jack Sparrow", "company": null, "street1":
         "388 Townsend St", "street2": "Apt 20", "city": "San Francisco", "state":
         "CA", "zip": "94107", "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>",
         "mode": "test", "carrier_facility": null, "residential": null, "federal_tax_id":
         null, "state_tax_id": null, "verifications": {}}, "buyer_address": {"id":
-        "adr_1a959c8df40711ed96783cecef1b359e", "object": "Address", "created_at":
-        "2023-05-16T16:31:26+00:00", "updated_at": "2023-05-16T16:31:26+00:00", "name":
+        "adr_b3a7617c8e3a11ee8622ac1f6bc539aa", "object": "Address", "created_at":
+        "2023-11-28T22:08:46+00:00", "updated_at": "2023-11-28T22:08:46+00:00", "name":
         "Elizabeth Swan", "company": null, "street1": "179 N Harbor Dr", "street2":
         null, "city": "Redondo Beach", "state": "CA", "zip": "90277", "country": "US",
         "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
         null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
-        {}}, "forms": [], "fees": [], "id": "shp_3672644215a9461b8eb342a3f219f0ac",
+        {}}, "forms": [], "fees": [], "id": "shp_8a8edce284194529b188ccc7721cfea4",
         "object": "Shipment"}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '6722'
+      - '7265'
       content-type:
       - application/json; charset=utf-8
-      etag:
-      - W/"48d191271c9a5d4f6d2f8f7f010b54fe"
       expires:
       - '0'
       location:
-      - /api/v2/shipments/shp_3672644215a9461b8eb342a3f219f0ac
+      - /api/v2/shipments/shp_8a8edce284194529b188ccc7721cfea4
       pragma:
       - no-cache
       referrer-policy:
@@ -148,20 +153,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 23bee7e26463afdee7872f570027a1bc
+      - ae35d0b8656664eee78a9c6b003fe922
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb7nuq
+      - bigweb32nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq a29e4ad05c
-      - extlb2nuq 5ab12a3ed2
+      - intlb2nuq b3de2c47ef
+      - extlb2nuq 003ad9bca0
       x-runtime:
-      - '0.603554'
+      - '0.483215'
       x-version-label:
-      - easypost-202305161623-0a285b6b1b-master
+      - easypost-202311250013-a0f06fbc2c-master
       x-xss-protection:
       - 1; mode=block
     status:
