--- a/tests/cassettes/test_shipment_create_empty_objects.yaml
+++ b/tests/cassettes/test_shipment_create_empty_objects.yaml
@@ -7,7 +7,7 @@ interactions:
       "Redondo Beach", "state": "CA", "zip": "90277", "country": "US", "email": "test@example.com",
       "phone": "5555555555"}, "parcel": {"length": 10, "width": 8, "height": 4, "weight":
       15.4}, "customs_info": {}, "options": null, "tax_identifiers": null, "reference":
-      ""}, "carbon_offset": false}'
+      ""}}'
     headers:
       Accept:
       - '*/*'
@@ -16,7 +16,7 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '599'
+      - '575'
       Content-Type:
       - application/json
       authorization:
@@ -27,95 +27,100 @@ interactions:
     uri: https://api.easypost.com/v2/shipments
   response:
     body:
-      string: '{"created_at": "2023-05-16T16:31:40Z", "is_return": false, "messages":
-        [{"carrier": "DhlEcs", "carrier_account_id": "ca_b1a0a1bc45844159812e0224d53948ea",
+      string: '{"created_at": "2023-11-28T22:09:04Z", "is_return": false, "messages":
+        [{"carrier": "DhlEcs", "carrier_account_id": "ca_c3cbbd21bc97400bbbaed6d030909476",
         "type": "rate_error", "message": "Unauthorized. Please check credentials and
-        try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_c3cbbd21bc97400bbbaed6d030909476",
-        "type": "rate_error", "message": "Unauthorized. Please check credentials and
-        try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_99007e1aeb66421faf82676f1199481e",
-        "type": "rate_error", "message": "Unauthorized. Please check credentials and
-        try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_0d64fd488c1444cf9bc16f858703e28f",
+        try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_b1a0a1bc45844159812e0224d53948ea",
         "type": "rate_error", "message": "Unauthorized. Please check credentials and
         try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_c7b4cfaf671b4984b84023d77561394a",
         "type": "rate_error", "message": "Unauthorized. Please check credentials and
         try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_711d8c4f9be54801b984e5dc9f2b5a7c",
         "type": "rate_error", "message": "Unauthorized. Please check credentials and
+        try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_0d64fd488c1444cf9bc16f858703e28f",
+        "type": "rate_error", "message": "Unauthorized. Please check credentials and
+        try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_99007e1aeb66421faf82676f1199481e",
+        "type": "rate_error", "message": "Unauthorized. Please check credentials and
         try again"}], "mode": "test", "options": {"currency": "USD", "payment": {"type":
         "SENDER"}, "date_advance": 0}, "reference": null, "status": "unknown", "tracking_code":
-        null, "updated_at": "2023-05-16T16:31:41Z", "batch_id": null, "batch_status":
+        null, "updated_at": "2023-11-28T22:09:05Z", "batch_id": null, "batch_status":
         null, "batch_message": null, "customs_info": null, "from_address": {"id":
-        "adr_23176c10f40711ed99113cecef1b359e", "object": "Address", "created_at":
-        "2023-05-16T16:31:40+00:00", "updated_at": "2023-05-16T16:31:40+00:00", "name":
+        "adr_be52ee708e3a11ee81593cecef1b359e", "object": "Address", "created_at":
+        "2023-11-28T22:09:04+00:00", "updated_at": "2023-11-28T22:09:04+00:00", "name":
         "Jack Sparrow", "company": null, "street1": "388 Townsend St", "street2":
         "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107", "country":
         "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
         null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
-        {}}, "insurance": null, "order_id": null, "parcel": {"id": "prcl_44a2f6b4a91b4ecd83b21da5e5b93c6d",
-        "object": "Parcel", "created_at": "2023-05-16T16:31:40Z", "updated_at": "2023-05-16T16:31:40Z",
+        {}}, "insurance": null, "order_id": null, "parcel": {"id": "prcl_c698a59382f84452a6870bedb3b3acc2",
+        "object": "Parcel", "created_at": "2023-11-28T22:09:04Z", "updated_at": "2023-11-28T22:09:04Z",
         "length": 10.0, "width": 8.0, "height": 4.0, "predefined_package": null, "weight":
-        15.4, "mode": "test"}, "postage_label": null, "rates": [{"id": "rate_54d99b19d719480e8e0e41348c9ecf6f",
-        "object": "Rate", "created_at": "2023-05-16T16:31:41Z", "updated_at": "2023-05-16T16:31:41Z",
-        "mode": "test", "service": "Express", "carrier": "USPS", "rate": "31.25",
-        "currency": "USD", "retail_rate": "35.80", "retail_currency": "USD", "list_rate":
-        "31.25", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
-        null, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        null, "shipment_id": "shp_6b58000596a1410cb683c886c5d3e153", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_ef1cc87c2f98443ca90529a70b41642a",
-        "object": "Rate", "created_at": "2023-05-16T16:31:41Z", "updated_at": "2023-05-16T16:31:41Z",
-        "mode": "test", "service": "ParcelSelect", "carrier": "USPS", "rate": "6.76",
-        "currency": "USD", "retail_rate": "7.75", "retail_currency": "USD", "list_rate":
-        "7.75", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
-        5, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        5, "shipment_id": "shp_6b58000596a1410cb683c886c5d3e153", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_6db9842202fd46c7940c0db418f7a49c",
-        "object": "Rate", "created_at": "2023-05-16T16:31:41Z", "updated_at": "2023-05-16T16:31:41Z",
-        "mode": "test", "service": "Priority", "carrier": "USPS", "rate": "7.15",
+        15.4, "mode": "test"}, "postage_label": null, "rates": [{"id": "rate_0e5e450f33f24e92819e5bcce174e7d8",
+        "object": "Rate", "created_at": "2023-11-28T22:09:05Z", "updated_at": "2023-11-28T22:09:05Z",
+        "mode": "test", "service": "Priority", "carrier": "USPS", "rate": "6.95",
         "currency": "USD", "retail_rate": "10.20", "retail_currency": "USD", "list_rate":
         "8.24", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
         2, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        2, "shipment_id": "shp_6b58000596a1410cb683c886c5d3e153", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_2db10f2e8fba4318ac2a92594630d7c0",
-        "object": "Rate", "created_at": "2023-05-16T16:31:41Z", "updated_at": "2023-05-16T16:31:41Z",
-        "mode": "test", "service": "First", "carrier": "USPS", "rate": "6.07", "currency":
-        "USD", "retail_rate": "6.07", "retail_currency": "USD", "list_rate": "6.07",
+        2, "shipment_id": "shp_f5391fd31308465db9776743f146db4c", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_57c76e997c8f4e6a8c859e8806c16011",
+        "object": "Rate", "created_at": "2023-11-28T22:09:05Z", "updated_at": "2023-11-28T22:09:05Z",
+        "mode": "test", "service": "GroundAdvantage", "carrier": "USPS", "rate": "5.93",
+        "currency": "USD", "retail_rate": "8.00", "retail_currency": "USD", "list_rate":
+        "6.07", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
+        3, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
+        3, "shipment_id": "shp_f5391fd31308465db9776743f146db4c", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_2541091a96e3444090065f80670bf531",
+        "object": "Rate", "created_at": "2023-11-28T22:09:05Z", "updated_at": "2023-11-28T22:09:05Z",
+        "mode": "test", "service": "First", "carrier": "USPS", "rate": "5.93", "currency":
+        "USD", "retail_rate": "8.00", "retail_currency": "USD", "list_rate": "6.07",
         "list_currency": "USD", "billing_type": "easypost", "delivery_days": 3, "delivery_date":
         null, "delivery_date_guaranteed": false, "est_delivery_days": 3, "shipment_id":
-        "shp_6b58000596a1410cb683c886c5d3e153", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"}],
+        "shp_f5391fd31308465db9776743f146db4c", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"},
+        {"id": "rate_32778cf969a94025b181d89826689cb4", "object": "Rate", "created_at":
+        "2023-11-28T22:09:05Z", "updated_at": "2023-11-28T22:09:05Z", "mode": "test",
+        "service": "ParcelSelect", "carrier": "USPS", "rate": "5.93", "currency":
+        "USD", "retail_rate": "8.00", "retail_currency": "USD", "list_rate": "6.07",
+        "list_currency": "USD", "billing_type": "easypost", "delivery_days": 3, "delivery_date":
+        null, "delivery_date_guaranteed": false, "est_delivery_days": 3, "shipment_id":
+        "shp_f5391fd31308465db9776743f146db4c", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"},
+        {"id": "rate_27ff349984ba4d4d9d424ae8df0cc437", "object": "Rate", "created_at":
+        "2023-11-28T22:09:05Z", "updated_at": "2023-11-28T22:09:05Z", "mode": "test",
+        "service": "Express", "carrier": "USPS", "rate": "31.25", "currency": "USD",
+        "retail_rate": "35.80", "retail_currency": "USD", "list_rate": "31.25", "list_currency":
+        "USD", "billing_type": "easypost", "delivery_days": null, "delivery_date":
+        null, "delivery_date_guaranteed": false, "est_delivery_days": null, "shipment_id":
+        "shp_f5391fd31308465db9776743f146db4c", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"}],
         "refund_status": null, "scan_form": null, "selected_rate": null, "tracker":
-        null, "to_address": {"id": "adr_23151d47f40711ed99103cecef1b359e", "object":
-        "Address", "created_at": "2023-05-16T16:31:40+00:00", "updated_at": "2023-05-16T16:31:40+00:00",
+        null, "to_address": {"id": "adr_be50371a8e3a11ee9773ac1f6bc539ae", "object":
+        "Address", "created_at": "2023-11-28T22:09:04+00:00", "updated_at": "2023-11-28T22:09:04+00:00",
         "name": "Elizabeth Swan", "company": null, "street1": "179 N Harbor Dr", "street2":
         null, "city": "Redondo Beach", "state": "CA", "zip": "90277", "country": "US",
         "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
         null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
-        {}}, "usps_zone": 4, "return_address": {"id": "adr_23176c10f40711ed99113cecef1b359e",
-        "object": "Address", "created_at": "2023-05-16T16:31:40+00:00", "updated_at":
-        "2023-05-16T16:31:40+00:00", "name": "Jack Sparrow", "company": null, "street1":
+        {}}, "usps_zone": 4, "return_address": {"id": "adr_be52ee708e3a11ee81593cecef1b359e",
+        "object": "Address", "created_at": "2023-11-28T22:09:04+00:00", "updated_at":
+        "2023-11-28T22:09:04+00:00", "name": "Jack Sparrow", "company": null, "street1":
         "388 Townsend St", "street2": "Apt 20", "city": "San Francisco", "state":
         "CA", "zip": "94107", "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>",
         "mode": "test", "carrier_facility": null, "residential": null, "federal_tax_id":
         null, "state_tax_id": null, "verifications": {}}, "buyer_address": {"id":
-        "adr_23151d47f40711ed99103cecef1b359e", "object": "Address", "created_at":
-        "2023-05-16T16:31:40+00:00", "updated_at": "2023-05-16T16:31:40+00:00", "name":
+        "adr_be50371a8e3a11ee9773ac1f6bc539ae", "object": "Address", "created_at":
+        "2023-11-28T22:09:04+00:00", "updated_at": "2023-11-28T22:09:04+00:00", "name":
         "Elizabeth Swan", "company": null, "street1": "179 N Harbor Dr", "street2":
         null, "city": "Redondo Beach", "state": "CA", "zip": "90277", "country": "US",
         "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
         null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
-        {}}, "forms": [], "fees": [], "id": "shp_6b58000596a1410cb683c886c5d3e153",
+        {}}, "forms": [], "fees": [], "id": "shp_f5391fd31308465db9776743f146db4c",
         "object": "Shipment"}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '5851'
+      - '6394'
       content-type:
       - application/json; charset=utf-8
-      etag:
-      - W/"e20fada0452013bea41fb951d4f7c860"
       expires:
       - '0'
       location:
-      - /api/v2/shipments/shp_6b58000596a1410cb683c886c5d3e153
+      - /api/v2/shipments/shp_f5391fd31308465db9776743f146db4c
       pragma:
       - no-cache
       referrer-policy:
@@ -131,20 +136,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 23bee7e06463afece7872f7e0027a679
+      - 88ad7b9265666500e78a9f83003f69bb
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb9nuq
+      - bigweb36nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq a29e4ad05c
-      - extlb2nuq 5ab12a3ed2
+      - intlb2nuq b3de2c47ef
+      - extlb1nuq 003ad9bca0
       x-runtime:
-      - '0.851051'
+      - '0.800244'
       x-version-label:
-      - easypost-202305152249-750e1e7d95-master
+      - easypost-202311250013-a0f06fbc2c-master
       x-xss-protection:
       - 1; mode=block
     status:
