--- a/tests/cassettes/test_shipment_create_with_ids.yaml
+++ b/tests/cassettes/test_shipment_create_with_ids.yaml
@@ -22,8 +22,8 @@ interactions:
     uri: https://api.easypost.com/v2/addresses
   response:
     body:
-      string: '{"id": "adr_246c9684f40711edb466ac1f6bc7bdc6", "object": "Address",
-        "created_at": "2023-05-16T16:31:43+00:00", "updated_at": "2023-05-16T16:31:43+00:00",
+      string: '{"id": "adr_bfbcf8998e3a11ee901eac1f6bc53342", "object": "Address",
+        "created_at": "2023-11-28T22:09:07+00:00", "updated_at": "2023-11-28T22:09:07+00:00",
         "name": "Jack Sparrow", "company": null, "street1": "388 Townsend St", "street2":
         "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107", "country":
         "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
@@ -36,12 +36,10 @@ interactions:
       - '461'
       content-type:
       - application/json; charset=utf-8
-      etag:
-      - W/"b432e3d3df2b21851b2e66c4e2310bf0"
       expires:
       - '0'
       location:
-      - /api/v2/addresses/adr_246c9684f40711edb466ac1f6bc7bdc6
+      - /api/v2/addresses/adr_bfbcf8998e3a11ee901eac1f6bc53342
       pragma:
       - no-cache
       referrer-policy:
@@ -57,20 +55,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 23bee7e56463afefe7872f800027a73c
+      - 88ad7b9365666503e78a9f85003f6b8e
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb9nuq
+      - bigweb39nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq a29e4ad05c
-      - extlb2nuq 5ab12a3ed2
+      - intlb1nuq b3de2c47ef
+      - extlb1nuq 003ad9bca0
       x-runtime:
-      - '0.047270'
+      - '0.040775'
       x-version-label:
-      - easypost-202305152249-750e1e7d95-master
+      - easypost-202311250013-a0f06fbc2c-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -99,8 +97,8 @@ interactions:
     uri: https://api.easypost.com/v2/addresses
   response:
     body:
-      string: '{"id": "adr_249c7c44f40711ed8ac3ac1f6b0a0d1e", "object": "Address",
-        "created_at": "2023-05-16T16:31:43+00:00", "updated_at": "2023-05-16T16:31:43+00:00",
+      string: '{"id": "adr_bfd8825c8e3a11ee9845ac1f6bc539ae", "object": "Address",
+        "created_at": "2023-11-28T22:09:07+00:00", "updated_at": "2023-11-28T22:09:07+00:00",
         "name": "Jack Sparrow", "company": null, "street1": "388 Townsend St", "street2":
         "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107", "country":
         "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
@@ -113,12 +111,10 @@ interactions:
       - '461'
       content-type:
       - application/json; charset=utf-8
-      etag:
-      - W/"bbc1fd04e6558270728ced29b2f81442"
       expires:
       - '0'
       location:
-      - /api/v2/addresses/adr_249c7c44f40711ed8ac3ac1f6b0a0d1e
+      - /api/v2/addresses/adr_bfd8825c8e3a11ee9845ac1f6bc539ae
       pragma:
       - no-cache
       referrer-policy:
@@ -134,20 +130,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 23bee7e56463afefe7872f800027a763
+      - 88ad7b9365666503e78a9f85003f6bb2
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb11nuq
+      - bigweb33nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq a29e4ad05c
-      - extlb2nuq 5ab12a3ed2
+      - intlb1nuq b3de2c47ef
+      - extlb1nuq 003ad9bca0
       x-runtime:
-      - '0.036120'
+      - '0.040241'
       x-version-label:
-      - easypost-202305152249-750e1e7d95-master
+      - easypost-202311250013-a0f06fbc2c-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -174,8 +170,8 @@ interactions:
     uri: https://api.easypost.com/v2/parcels
   response:
     body:
-      string: '{"id": "prcl_15d259708d9c4231bbe4d6c38d032e87", "object": "Parcel",
-        "created_at": "2023-05-16T16:31:43Z", "updated_at": "2023-05-16T16:31:43Z",
+      string: '{"id": "prcl_afbe09d245bc4206800ba9a28b94cba4", "object": "Parcel",
+        "created_at": "2023-11-28T22:09:07Z", "updated_at": "2023-11-28T22:09:07Z",
         "length": 10.0, "width": 8.0, "height": 4.0, "predefined_package": null, "weight":
         15.4, "mode": "test"}'
     headers:
@@ -185,12 +181,10 @@ interactions:
       - '229'
       content-type:
       - application/json; charset=utf-8
-      etag:
-      - W/"902396e46ebf1a381d30cb4b9f342f1f"
       expires:
       - '0'
       location:
-      - /api/prcl_15d259708d9c4231bbe4d6c38d032e87/parcels
+      - /api/v2/parcels/prcl_afbe09d245bc4206800ba9a28b94cba4
       pragma:
       - no-cache
       referrer-policy:
@@ -206,29 +200,29 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 23bee7e56463afefe7872f800027a76c
+      - 88ad7b9365666503e78a9f85003f6bd8
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb8nuq
+      - bigweb41nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq a29e4ad05c
-      - extlb2nuq 5ab12a3ed2
+      - intlb1nuq b3de2c47ef
+      - extlb1nuq 003ad9bca0
       x-runtime:
-      - '0.025857'
+      - '0.036102'
       x-version-label:
-      - easypost-202305152249-750e1e7d95-master
+      - easypost-202311250013-a0f06fbc2c-master
       x-xss-protection:
       - 1; mode=block
     status:
       code: 201
       message: Created
 - request:
-    body: '{"shipment": {"from_address": {"id": "adr_246c9684f40711edb466ac1f6bc7bdc6"},
-      "to_address": {"id": "adr_249c7c44f40711ed8ac3ac1f6b0a0d1e"}, "parcel": {"id":
-      "prcl_15d259708d9c4231bbe4d6c38d032e87"}}, "carbon_offset": false}'
+    body: '{"shipment": {"from_address": {"id": "adr_bfbcf8998e3a11ee901eac1f6bc53342"},
+      "to_address": {"id": "adr_bfd8825c8e3a11ee9845ac1f6bc539ae"}, "parcel": {"id":
+      "prcl_afbe09d245bc4206800ba9a28b94cba4"}}}'
     headers:
       Accept:
       - '*/*'
@@ -237,7 +231,7 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '223'
+      - '199'
       Content-Type:
       - application/json
       authorization:
@@ -248,95 +242,100 @@ interactions:
     uri: https://api.easypost.com/v2/shipments
   response:
     body:
-      string: '{"created_at": "2023-05-16T16:31:43Z", "is_return": false, "messages":
-        [{"carrier": "DhlEcs", "carrier_account_id": "ca_c7b4cfaf671b4984b84023d77561394a",
-        "type": "rate_error", "message": "Unauthorized. Please check credentials and
-        try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_711d8c4f9be54801b984e5dc9f2b5a7c",
-        "type": "rate_error", "message": "Unauthorized. Please check credentials and
-        try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_0d64fd488c1444cf9bc16f858703e28f",
-        "type": "rate_error", "message": "Unauthorized. Please check credentials and
-        try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_c3cbbd21bc97400bbbaed6d030909476",
+      string: '{"created_at": "2023-11-28T22:09:07Z", "is_return": false, "messages":
+        [{"carrier": "DhlEcs", "carrier_account_id": "ca_0d64fd488c1444cf9bc16f858703e28f",
         "type": "rate_error", "message": "Unauthorized. Please check credentials and
         try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_99007e1aeb66421faf82676f1199481e",
         "type": "rate_error", "message": "Unauthorized. Please check credentials and
+        try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_711d8c4f9be54801b984e5dc9f2b5a7c",
+        "type": "rate_error", "message": "Unauthorized. Please check credentials and
+        try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_c7b4cfaf671b4984b84023d77561394a",
+        "type": "rate_error", "message": "Unauthorized. Please check credentials and
         try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_b1a0a1bc45844159812e0224d53948ea",
+        "type": "rate_error", "message": "Unauthorized. Please check credentials and
+        try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_c3cbbd21bc97400bbbaed6d030909476",
         "type": "rate_error", "message": "Unauthorized. Please check credentials and
         try again"}], "mode": "test", "options": {"currency": "USD", "payment": {"type":
         "SENDER"}, "date_advance": 0}, "reference": null, "status": "unknown", "tracking_code":
-        null, "updated_at": "2023-05-16T16:31:44Z", "batch_id": null, "batch_status":
+        null, "updated_at": "2023-11-28T22:09:08Z", "batch_id": null, "batch_status":
         null, "batch_message": null, "customs_info": null, "from_address": {"id":
-        "adr_246c9684f40711edb466ac1f6bc7bdc6", "object": "Address", "created_at":
-        "2023-05-16T16:31:43+00:00", "updated_at": "2023-05-16T16:31:43+00:00", "name":
+        "adr_bfbcf8998e3a11ee901eac1f6bc53342", "object": "Address", "created_at":
+        "2023-11-28T22:09:07+00:00", "updated_at": "2023-11-28T22:09:07+00:00", "name":
         "Jack Sparrow", "company": null, "street1": "388 Townsend St", "street2":
         "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107", "country":
         "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
         null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
-        {}}, "insurance": null, "order_id": null, "parcel": {"id": "prcl_15d259708d9c4231bbe4d6c38d032e87",
-        "object": "Parcel", "created_at": "2023-05-16T16:31:43Z", "updated_at": "2023-05-16T16:31:43Z",
+        {}}, "insurance": null, "order_id": null, "parcel": {"id": "prcl_afbe09d245bc4206800ba9a28b94cba4",
+        "object": "Parcel", "created_at": "2023-11-28T22:09:07Z", "updated_at": "2023-11-28T22:09:07Z",
         "length": 10.0, "width": 8.0, "height": 4.0, "predefined_package": null, "weight":
-        15.4, "mode": "test"}, "postage_label": null, "rates": [{"id": "rate_6e799193731b482da2e69b504ad2b781",
-        "object": "Rate", "created_at": "2023-05-16T16:31:44Z", "updated_at": "2023-05-16T16:31:44Z",
-        "mode": "test", "service": "First", "carrier": "USPS", "rate": "5.85", "currency":
-        "USD", "retail_rate": "5.85", "retail_currency": "USD", "list_rate": "5.85",
+        15.4, "mode": "test"}, "postage_label": null, "rates": [{"id": "rate_e6830757ed374d7fad0010c2b50bef7d",
+        "object": "Rate", "created_at": "2023-11-28T22:09:08Z", "updated_at": "2023-11-28T22:09:08Z",
+        "mode": "test", "service": "Express", "carrier": "USPS", "rate": "25.25",
+        "currency": "USD", "retail_rate": "29.20", "retail_currency": "USD", "list_rate":
+        "25.25", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
+        null, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
+        null, "shipment_id": "shp_a43912c17d674287aa39e8a4bfdf0fe2", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_c58b30434f6a4e1289b6f8ee06d7a671",
+        "object": "Rate", "created_at": "2023-11-28T22:09:08Z", "updated_at": "2023-11-28T22:09:08Z",
+        "mode": "test", "service": "Priority", "carrier": "USPS", "rate": "6.73",
+        "currency": "USD", "retail_rate": "9.35", "retail_currency": "USD", "list_rate":
+        "7.64", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
+        1, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
+        1, "shipment_id": "shp_a43912c17d674287aa39e8a4bfdf0fe2", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_158f05986bb9485a9b8c5454f55b9964",
+        "object": "Rate", "created_at": "2023-11-28T22:09:08Z", "updated_at": "2023-11-28T22:09:08Z",
+        "mode": "test", "service": "GroundAdvantage", "carrier": "USPS", "rate": "5.52",
+        "currency": "USD", "retail_rate": "7.60", "retail_currency": "USD", "list_rate":
+        "5.85", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
+        2, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
+        2, "shipment_id": "shp_a43912c17d674287aa39e8a4bfdf0fe2", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_bdc38a011a2c4f3a94e508f1a171a329",
+        "object": "Rate", "created_at": "2023-11-28T22:09:08Z", "updated_at": "2023-11-28T22:09:08Z",
+        "mode": "test", "service": "First", "carrier": "USPS", "rate": "5.52", "currency":
+        "USD", "retail_rate": "7.60", "retail_currency": "USD", "list_rate": "5.85",
         "list_currency": "USD", "billing_type": "easypost", "delivery_days": 2, "delivery_date":
         null, "delivery_date_guaranteed": false, "est_delivery_days": 2, "shipment_id":
-        "shp_830a7745d7244fecbf79a13ca495abdc", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"},
-        {"id": "rate_35ce07db23ed4838b90c7eddc51eb666", "object": "Rate", "created_at":
-        "2023-05-16T16:31:44Z", "updated_at": "2023-05-16T16:31:44Z", "mode": "test",
-        "service": "Express", "carrier": "USPS", "rate": "25.25", "currency": "USD",
-        "retail_rate": "29.20", "retail_currency": "USD", "list_rate": "25.25", "list_currency":
-        "USD", "billing_type": "easypost", "delivery_days": null, "delivery_date":
-        null, "delivery_date_guaranteed": false, "est_delivery_days": null, "shipment_id":
-        "shp_830a7745d7244fecbf79a13ca495abdc", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"},
-        {"id": "rate_968c5eb28caa4864acb3cb8feedd6303", "object": "Rate", "created_at":
-        "2023-05-16T16:31:44Z", "updated_at": "2023-05-16T16:31:44Z", "mode": "test",
-        "service": "ParcelSelect", "carrier": "USPS", "rate": "6.47", "currency":
-        "USD", "retail_rate": "6.99", "retail_currency": "USD", "list_rate": "6.99",
+        "shp_a43912c17d674287aa39e8a4bfdf0fe2", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"},
+        {"id": "rate_8df6bb6616da4749906a293ae5f69532", "object": "Rate", "created_at":
+        "2023-11-28T22:09:08Z", "updated_at": "2023-11-28T22:09:08Z", "mode": "test",
+        "service": "ParcelSelect", "carrier": "USPS", "rate": "5.52", "currency":
+        "USD", "retail_rate": "7.60", "retail_currency": "USD", "list_rate": "5.85",
         "list_currency": "USD", "billing_type": "easypost", "delivery_days": 2, "delivery_date":
         null, "delivery_date_guaranteed": false, "est_delivery_days": 2, "shipment_id":
-        "shp_830a7745d7244fecbf79a13ca495abdc", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"},
-        {"id": "rate_2eb934a430d446b4965ea55c2c4cd5e7", "object": "Rate", "created_at":
-        "2023-05-16T16:31:44Z", "updated_at": "2023-05-16T16:31:44Z", "mode": "test",
-        "service": "Priority", "carrier": "USPS", "rate": "7.00", "currency": "USD",
-        "retail_rate": "9.35", "retail_currency": "USD", "list_rate": "7.64", "list_currency":
-        "USD", "billing_type": "easypost", "delivery_days": 1, "delivery_date": null,
-        "delivery_date_guaranteed": false, "est_delivery_days": 1, "shipment_id":
-        "shp_830a7745d7244fecbf79a13ca495abdc", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"}],
+        "shp_a43912c17d674287aa39e8a4bfdf0fe2", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"}],
         "refund_status": null, "scan_form": null, "selected_rate": null, "tracker":
-        null, "to_address": {"id": "adr_249c7c44f40711ed8ac3ac1f6b0a0d1e", "object":
-        "Address", "created_at": "2023-05-16T16:31:43+00:00", "updated_at": "2023-05-16T16:31:43+00:00",
+        null, "to_address": {"id": "adr_bfd8825c8e3a11ee9845ac1f6bc539ae", "object":
+        "Address", "created_at": "2023-11-28T22:09:07+00:00", "updated_at": "2023-11-28T22:09:07+00:00",
         "name": "Jack Sparrow", "company": null, "street1": "388 Townsend St", "street2":
         "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107", "country":
         "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
         null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
-        {}}, "usps_zone": 1, "return_address": {"id": "adr_246c9684f40711edb466ac1f6bc7bdc6",
-        "object": "Address", "created_at": "2023-05-16T16:31:43+00:00", "updated_at":
-        "2023-05-16T16:31:43+00:00", "name": "Jack Sparrow", "company": null, "street1":
+        {}}, "usps_zone": 1, "return_address": {"id": "adr_bfbcf8998e3a11ee901eac1f6bc53342",
+        "object": "Address", "created_at": "2023-11-28T22:09:07+00:00", "updated_at":
+        "2023-11-28T22:09:07+00:00", "name": "Jack Sparrow", "company": null, "street1":
         "388 Townsend St", "street2": "Apt 20", "city": "San Francisco", "state":
         "CA", "zip": "94107", "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>",
         "mode": "test", "carrier_facility": null, "residential": null, "federal_tax_id":
         null, "state_tax_id": null, "verifications": {}}, "buyer_address": {"id":
-        "adr_249c7c44f40711ed8ac3ac1f6b0a0d1e", "object": "Address", "created_at":
-        "2023-05-16T16:31:43+00:00", "updated_at": "2023-05-16T16:31:43+00:00", "name":
+        "adr_bfd8825c8e3a11ee9845ac1f6bc539ae", "object": "Address", "created_at":
+        "2023-11-28T22:09:07+00:00", "updated_at": "2023-11-28T22:09:07+00:00", "name":
         "Jack Sparrow", "company": null, "street1": "388 Townsend St", "street2":
         "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107", "country":
         "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
         null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
-        {}}, "forms": [], "fees": [], "id": "shp_830a7745d7244fecbf79a13ca495abdc",
+        {}}, "forms": [], "fees": [], "id": "shp_a43912c17d674287aa39e8a4bfdf0fe2",
         "object": "Shipment"}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '5854'
+      - '6397'
       content-type:
       - application/json; charset=utf-8
-      etag:
-      - W/"c573b9dd80e322649943bd3ade22c33e"
       expires:
       - '0'
       location:
-      - /api/v2/shipments/shp_830a7745d7244fecbf79a13ca495abdc
+      - /api/v2/shipments/shp_a43912c17d674287aa39e8a4bfdf0fe2
       pragma:
       - no-cache
       referrer-policy:
@@ -347,25 +346,27 @@ interactions:
       - chunked
       x-backend:
       - easypost
+      x-canary:
+      - direct
       x-content-type-options:
       - nosniff
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 23bee7e56463afefe7872f800027a779
+      - 88ad7b9365666503e78a9f85003f6bfa
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb3nuq
+      - bigweb32nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq a29e4ad05c
-      - extlb2nuq 5ab12a3ed2
+      - intlb1nuq b3de2c47ef
+      - extlb1nuq 003ad9bca0
       x-runtime:
-      - '0.748315'
+      - '0.742956'
       x-version-label:
-      - easypost-202305152249-750e1e7d95-master
+      - easypost-202311250013-a0f06fbc2c-master
       x-xss-protection:
       - 1; mode=block
     status:
